(master) puppet doc generator updated

--- a/docsets/Vagrant.docset/Contents/Resources/Documents/index.html
+++ b/docsets/Vagrant.docset/Contents/Resources/Documents/index.html
@@ -1,38 +1,38 @@
 <!DOCTYPE html>
-<html>
-    <head>
+<html xmlns="http://www.w3.org/1999/xhtml">
+    <head><meta http-equiv="Content-Type" content="text/html; charset=US-ASCII" />
         <title>
             Vagrant Documentation
         </title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
         <link href="./stylesheets/bootstrap-2bdef9a2.css" media="screen" rel="stylesheet" type="text/css" />
         <link href="./stylesheets/vagrantup-d5d54c59.css" media="screen" rel="stylesheet" type="text/css" />
-        <script src="./javascripts/jquery-08c11650.js" type="text/javascript">
-</script>
-        <script src="./javascripts/modernizr-84c0465a.js" type="text/javascript">
-</script>
-        <script src="./javascripts/bootstrap.min-98cc7a22.js" type="text/javascript">
-</script>
-        <script src="./javascripts/backstretch-3d1212ad.js" type="text/javascript">
-</script>
-        <script src="./javascripts/vagrantup-03aae2a8.js" type="text/javascript">
-</script>
-        <link href='//fonts.googleapis.com/css?family=Inconsolata' rel="stylesheet" type="text/css" />
-        <script src="//use.typekit.net/xfs6zus.js" type="text/javascript">
-</script>
-        <script type="text/javascript">
+        <script src="./javascripts/jquery-08c11650.js" type="text/javascript"><![CDATA[
+]]></script>
+        <script src="./javascripts/modernizr-84c0465a.js" type="text/javascript"><![CDATA[
+]]></script>
+        <script src="./javascripts/bootstrap.min-98cc7a22.js" type="text/javascript"><![CDATA[
+]]></script>
+        <script src="./javascripts/backstretch-3d1212ad.js" type="text/javascript"><![CDATA[
+]]></script>
+        <script src="./javascripts/vagrantup-03aae2a8.js" type="text/javascript"><![CDATA[
+]]></script>
+        <link href=".//fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet" type="text/css" />
+        <script src=".//use.typekit.net/xfs6zus.js" type="text/javascript"><![CDATA[
+]]></script>
+        <script type="text/javascript"><![CDATA[
 //<![CDATA[
         try{Typekit.load();}catch(e){}
-        //]]>
-        </script>
+        //]]]]><![CDATA[>
+        ]]></script>
     </head>
     <body>
         <div class="wrapper">
             <nav class="docs">
-                <a class="vagrant-docs-logo" href="/">Vagrant Documentation</a>
+                <a class="vagrant-docs-logo" href="./">Vagrant Documentation</a>
                 <ul class="pull-right unstyled">
                     <li>
-                        <a href="//www.vagrantup.com/">Home</a>
+                        <a href=".//www.vagrantup.com/">Home</a>
                     </li>
                 </ul>
             </nav>
@@ -118,44 +118,44 @@
                         <div class="span12">
                             <ul class="unstyled footer-nav">
                                 <li>
-                                    <a href="//docs.vagrantup.com/">Documentation</a>
+                                    <a href=".//docs.vagrantup.com/">Documentation</a>
                                 </li>
                                 <li>
-                                    <a href="//www.vagrantup.com/about">About</a>
+                                    <a href=".//www.vagrantup.com/about">About</a>
                                 </li>
                                 <li>
-                                    <a href="//www.vagrantup.com/support">Support</a>
+                                    <a href=".//www.vagrantup.com/support">Support</a>
                                 </li>
                                 <li style="list-style: none">
-                                    <a href="//downloads.vagrantup.com/"></a>
+                                    <a href=".//downloads.vagrantup.com/"></a>
                                 </li>
                                 <li class="button inline-button">Download
                                 </li>
                             </ul>
                             <ul class="unstyled logos">
                                 <li style="list-style: none">
-                                    <a href="//www.vagrantup.com"></a>
+                                    <a href=".//www.vagrantup.com"></a>
                                 </li>
                                 <li>
                                     <span>by</span>
                                 </li>
                                 <li style="list-style: none">
-                                    <a href="//www.hashicorp.com"></a>
+                                    <a href=".//www.hashicorp.com"></a>
                                 </li>
                             </ul>
                         </div>
                     </div>
                     <div class="row">
                         <h6 class="legal">
-                            © 2013 HashiCorp
+                            &#169; 2013 HashiCorp
                         </h6>
                     </div>
                 </div>
             </footer>
-        </div><script type="text/javascript">
+        </div><script type="text/javascript"><![CDATA[
 //<![CDATA[
             $(".big-background").backstretch("assets/photos/full_width.jpg");
-        //]]>
-        </script>
+        //]]]]><![CDATA[>
+        ]]></script>
     </body>
 </html>
