--- a/docsets/Vagrant.docset/Contents/Resources/Documents/v2/boxes.html
+++ b/docsets/Vagrant.docset/Contents/Resources/Documents/v2/boxes.html
@@ -1,8 +1,181 @@
-<!DOCTYPE html><html><head><title> Boxes - Vagrant Documentation</title><meta name=viewport content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"><link href="./../stylesheets/bootstrap-2bdef9a2.css" media=screen rel=stylesheet /><link href="./../stylesheets/vagrantup-d5d54c59.css" media=screen rel=stylesheet /><script src="./../javascripts/jquery-08c11650.js"></script><script src="./../javascripts/modernizr-84c0465a.js"></script><script src="./../javascripts/bootstrap.min-98cc7a22.js"></script><script src="./../javascripts/backstretch-3d1212ad.js"></script><script src="./../javascripts/vagrantup-03aae2a8.js"></script><link href='//fonts.googleapis.com/css?family=Inconsolata' rel=stylesheet><script src="//use.typekit.net/xfs6zus.js"></script><script>try{Typekit.load();}catch(e){}</script></head><body><div class=wrapper><nav class=docs><a class=vagrant-docs-logo href="/">Vagrant Documentation</a><ul class="pull-right unstyled"><li><a href="//www.vagrantup.com/">Home</a></li></ul></nav><div class="page docs docs-home"><div class=container><div class=row><div class="sidebar span3"><aside class=sidebar-nav><div class="toggle hidden-desktop"><div class="open-close open"></div><a href="#">Contents</a></div><ul class=unstyled><li><a href="./../v2/">Overview</a></li><li><a href="./../v2/why-vagrant/index.html">Why Vagrant?</a></li><li><a href="./../v2/installation/index.html">Installation</a></li><li><a href="./../v2/getting-started/index.html">Getting Started</a></li><li><a href="./../v2/cli/index.html">Command-Line Interface</a></li><li><a href="./../v2/vagrantfile/index.html">Vagrantfile</a></li><li class=current><a href="./../v2/boxes.html">Boxes</a></li><ul class="sub unstyled"><li><a href="./../v2/boxes/format.html">Box File Format</a></li></ul><li><a href="./../v2/provisioning/index.html">Provisioning</a></li><li><a href="./../v2/networking/index.html">Networking</a></li><li><a href="./../v2/synced-folders/index.html">Synced Folders</a></li><li><a href="./../v2/multi-machine/index.html">Multi-Machine</a></li><li><a href="./../v2/providers/index.html">Providers</a></li><li><a href="./../v2/virtualbox/index.html">VirtualBox</a></li><li><a href="./../v2/vmware/index.html">VMware</a></li><li><a href="./../v2/plugins/index.html">Plugins</a></li><li><a href="./../v2/debugging.html">Debugging</a></li></ul></aside></div><div class="page-contents span9"><div class=page-background></div><div class=row><div class="span8 offset1"><h1>Boxes</h1><p>Boxes are the skeleton from which Vagrant machines are constructed. They are portable files which can be used by others on any platform that runs Vagrant to bring up a working environment.</p><p>The <code>vagrant box</code> utility provides all the functionality for managing boxes. Boxes must currently be created manually.</p><p>Boxes are <a href="./../v2/providers/">provider-specific</a>, so you must obtain the proper box depending on what provider you&#39;re using.</p><p>If you&#39;re interested in more details on the exact file format of boxes, there is a separate <a href="./../v2/boxes/format.html">page dedicated to that</a>, since it is an advanced topic that general users don&#39;t need to know.</p><h2>Adding Boxes</h2><p>Adding boxes is straightforward:</p><pre><code>$ vagrant box add name url
-</code></pre><p><code>name</code> is a logical name by which the box is referenced from the Vagrantfile. You can put anything you want here, but know that Vagrant matches the <code>config.vm.box</code> directive with this name in order to look up the box to use.</p><p><code>url</code> is the location of the box. This can be a path to your local filesystem or an HTTP URL to the box remotely.</p><p>Vagrant will automatically determine the provider the box was built for by reading the &quot;metadata.json&quot; file within the box archive. You may also tell Vagrant what provider the box is for by specifying the <code>--provider</code> flag.</p><p>This is recommended as it adds an extra level of verification to the box you&#39;re downloading. Additionally, Vagrant can exit early with an error if a box with that name and provider already exists, whereas it must download the entire box before showing such an error in the other case.</p><p>Multiple boxes with the same name can exist as long as they are all for different providers. The example of listing boxes below shows this, where there are multiple precise64 boxes, backed by different providers. This lets a single <code>config.vm.box</code> configuration within a Vagrantfile properly reference boxes across providers.</p><h2>Listing Boxes</h2><p>To view what boxes Vagrant has locally installed, use <code>vagrant box list</code>:</p><pre><code>$ vagrant box list
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml">
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=US-ASCII" />
+    <title> Boxes - Vagrant Documentation</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <link href="./../stylesheets/bootstrap-2bdef9a2.css" media="screen" rel="stylesheet" />
+    <link href="./../stylesheets/vagrantup-d5d54c59.css" media="screen" rel="stylesheet" />
+    <script src="./../javascripts/jquery-08c11650.js"></script>
+    <script src="./../javascripts/modernizr-84c0465a.js"></script>
+    <script src="./../javascripts/bootstrap.min-98cc7a22.js"></script>
+    <script src="./../javascripts/backstretch-3d1212ad.js"></script>
+    <script src="./../javascripts/vagrantup-03aae2a8.js"></script>
+    <link href="./..//fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet" />
+    <script src="./..//use.typekit.net/xfs6zus.js"></script>
+    <script>
+<![CDATA[try{Typekit.load();}catch(e){}]]>
+    </script>
+  </head>
+  <body>
+    <div class="wrapper">
+      <nav class="docs">
+        <a class="vagrant-docs-logo" href="./../">Vagrant Documentation</a>
+        <ul class="pull-right unstyled">
+          <li>
+            <a href="./..//www.vagrantup.com/">Home</a>
+          </li>
+        </ul>
+      </nav>
+      <div class="page docs docs-home">
+        <div class="container">
+          <div class="row">
+            <div class="sidebar span3">
+              <aside class="sidebar-nav">
+                <div class="toggle hidden-desktop">
+                  <div class="open-close open"></div>
+                  <a href="#">Contents</a>
+                </div>
+                <ul class="unstyled">
+                  <li>
+                    <a href="./../v2/">Overview</a>
+                  </li>
+                  <li>
+                    <a href="./../v2/why-vagrant/index.html">Why Vagrant?</a>
+                  </li>
+                  <li>
+                    <a href="./../v2/installation/index.html">Installation</a>
+                  </li>
+                  <li>
+                    <a href="./../v2/getting-started/index.html">Getting Started</a>
+                  </li>
+                  <li>
+                    <a href="./../v2/cli/index.html">Command-Line Interface</a>
+                  </li>
+                  <li>
+                    <a href="./../v2/vagrantfile/index.html">Vagrantfile</a>
+                  </li>
+                  <li class="current">
+                    <a href="./../v2/boxes.html">Boxes</a>
+                  </li>
+                  <ul class="sub unstyled">
+                    <li>
+                      <a href="./../v2/boxes/format.html">Box File Format</a>
+                    </li>
+                  </ul>
+                  <li>
+                    <a href="./../v2/provisioning/index.html">Provisioning</a>
+                  </li>
+                  <li>
+                    <a href="./../v2/networking/index.html">Networking</a>
+                  </li>
+                  <li>
+                    <a href="./../v2/synced-folders/index.html">Synced Folders</a>
+                  </li>
+                  <li>
+                    <a href="./../v2/multi-machine/index.html">Multi-Machine</a>
+                  </li>
+                  <li>
+                    <a href="./../v2/providers/index.html">Providers</a>
+                  </li>
+                  <li>
+                    <a href="./../v2/virtualbox/index.html">VirtualBox</a>
+                  </li>
+                  <li>
+                    <a href="./../v2/vmware/index.html">VMware</a>
+                  </li>
+                  <li>
+                    <a href="./../v2/plugins/index.html">Plugins</a>
+                  </li>
+                  <li>
+                    <a href="./../v2/debugging.html">Debugging</a>
+                  </li>
+                </ul>
+              </aside>
+            </div>
+            <div class="page-contents span9">
+              <div class="page-background"></div>
+              <div class="row">
+                <div class="span8 offset1">
+                  <h1>Boxes</h1>
+                  <p>Boxes are the skeleton from which Vagrant machines are constructed. They are portable files which can be used by others on any platform that runs Vagrant to bring up a working environment.</p>
+                  <p>The <code>vagrant box</code> utility provides all the functionality for managing boxes. Boxes must currently be created manually.</p>
+                  <p>Boxes are <a href="./../v2/providers/">provider-specific</a>, so you must obtain the proper box depending on what provider you're using.</p>
+                  <p>If you're interested in more details on the exact file format of boxes, there is a separate <a href="./../v2/boxes/format.html">page dedicated to that</a>, since it is an advanced topic that general users don't need to know.</p>
+                  <h2>Adding Boxes</h2>
+                  <p>Adding boxes is straightforward:</p>
+                  <pre>
+                    <code>$ vagrant box add name url
+</code>
+                  </pre>
+                  <p><code>name</code> is a logical name by which the box is referenced from the Vagrantfile. You can put anything you want here, but know that Vagrant matches the <code>config.vm.box</code> directive with this name in order to look up the box to use.</p>
+                  <p><code>url</code> is the location of the box. This can be a path to your local filesystem or an HTTP URL to the box remotely.</p>
+                  <p>Vagrant will automatically determine the provider the box was built for by reading the "metadata.json" file within the box archive. You may also tell Vagrant what provider the box is for by specifying the <code>--provider</code> flag.</p>
+                  <p>This is recommended as it adds an extra level of verification to the box you're downloading. Additionally, Vagrant can exit early with an error if a box with that name and provider already exists, whereas it must download the entire box before showing such an error in the other case.</p>
+                  <p>Multiple boxes with the same name can exist as long as they are all for different providers. The example of listing boxes below shows this, where there are multiple precise64 boxes, backed by different providers. This lets a single <code>config.vm.box</code> configuration within a Vagrantfile properly reference boxes across providers.</p>
+                  <h2>Listing Boxes</h2>
+                  <p>To view what boxes Vagrant has locally installed, use <code>vagrant box list</code>:</p>
+                  <pre>
+                    <code>$ vagrant box list
 precise64 (virtualbox)
 precise64 (vmware_fusion)
-</code></pre><p>Vagrant lists all boxes along with the providers the box is for in parentheses.</p><h2>Removing Boxes</h2><p>Boxes can be removed just as easily as they are added:</p><pre><code>$ vagrant box remove precise64 virtualbox
-</code></pre><p>The two arguments are the logical name of the box and the provider of the box. The second argument (the provider) is optional. If you have only a single provider backing that box, it doesn&#39;t need to be specified. If you have multiple providers backing a box and it isn&#39;t specified, Vagrant will show an error.</p></div></div></div></div></div></div><footer><div class=container><div class=row><div class=span12><ul class="unstyled footer-nav"><li><a href="//docs.vagrantup.com/">Documentation</a></li><li><a href="//www.vagrantup.com/about">About</a></li><li><a href="//www.vagrantup.com/support">Support</a></li><a href="//downloads.vagrantup.com/"><li class="button inline-button">Download</li></a></ul><ul class="unstyled logos"><a href="//www.vagrantup.com"><li class=vagrant-logo-monochrome></li></a><li><span>by</span></li><a href="//www.hashicorp.com"><li class="hashi-logo-monochrome "></li></a></ul></div></div><div class=row><h6 class=legal> &#169; 2013 HashiCorp </h6></div></div></footer></div><script>
+</code>
+                  </pre>
+                  <p>Vagrant lists all boxes along with the providers the box is for in parentheses.</p>
+                  <h2>Removing Boxes</h2>
+                  <p>Boxes can be removed just as easily as they are added:</p>
+                  <pre>
+                    <code>$ vagrant box remove precise64 virtualbox
+</code>
+                  </pre>
+                  <p>The two arguments are the logical name of the box and the provider of the box. The second argument (the provider) is optional. If you have only a single provider backing that box, it doesn't need to be specified. If you have multiple providers backing a box and it isn't specified, Vagrant will show an error.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <footer>
+        <div class="container">
+          <div class="row">
+            <div class="span12">
+              <ul class="unstyled footer-nav">
+                <li>
+                  <a href="./..//docs.vagrantup.com/">Documentation</a>
+                </li>
+                <li>
+                  <a href="./..//www.vagrantup.com/about">About</a>
+                </li>
+                <li>
+                  <a href="./..//www.vagrantup.com/support">Support</a>
+                </li>
+                <a href="./..//downloads.vagrantup.com/">
+                  <li class="button inline-button">Download</li>
+                </a>
+              </ul>
+              <ul class="unstyled logos">
+                <a href="./..//www.vagrantup.com">
+                  <li class="vagrant-logo-monochrome"></li>
+                </a>
+                <li>
+                  <span>by</span>
+                </li>
+                <a href="./..//www.hashicorp.com">
+                  <li class="hashi-logo-monochrome "></li>
+                </a>
+              </ul>
+            </div>
+          </div>
+          <div class="row">
+            <h6 class="legal"> &#169; 2013 HashiCorp </h6>
+          </div>
+        </div>
+      </footer>
+    </div>
+    <script>
+<![CDATA[
 			$(".big-background").backstretch("assets/photos/full_width.jpg");
-		</script></body></html>
+		]]>
+    </script>
+  </body>
+</html>
