--- a/docsets/Vagrant.docset/Contents/Resources/Documents/v2/debugging.html
+++ b/docsets/Vagrant.docset/Contents/Resources/Documents/v2/debugging.html
@@ -1,8 +1,162 @@
-<!DOCTYPE html><html><head><title> Debugging and Troubleshooting - Vagrant Documentation</title><meta name=viewport content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"><link href="./../stylesheets/bootstrap-2bdef9a2.css" media=screen rel=stylesheet /><link href="./../stylesheets/vagrantup-d5d54c59.css" media=screen rel=stylesheet /><script src="./../javascripts/jquery-08c11650.js"></script><script src="./../javascripts/modernizr-84c0465a.js"></script><script src="./../javascripts/bootstrap.min-98cc7a22.js"></script><script src="./../javascripts/backstretch-3d1212ad.js"></script><script src="./../javascripts/vagrantup-03aae2a8.js"></script><link href='//fonts.googleapis.com/css?family=Inconsolata' rel=stylesheet><script src="//use.typekit.net/xfs6zus.js"></script><script>try{Typekit.load();}catch(e){}</script></head><body><div class=wrapper><nav class=docs><a class=vagrant-docs-logo href="/">Vagrant Documentation</a><ul class="pull-right unstyled"><li><a href="//www.vagrantup.com/">Home</a></li></ul></nav><div class="page docs docs-home"><div class=container><div class=row><div class="sidebar span3"><aside class=sidebar-nav><div class="toggle hidden-desktop"><div class="open-close open"></div><a href="#">Contents</a></div><ul class=unstyled><li><a href="./../v2/">Overview</a></li><li><a href="./../v2/why-vagrant/index.html">Why Vagrant?</a></li><li><a href="./../v2/installation/index.html">Installation</a></li><li><a href="./../v2/getting-started/index.html">Getting Started</a></li><li><a href="./../v2/cli/index.html">Command-Line Interface</a></li><li><a href="./../v2/vagrantfile/index.html">Vagrantfile</a></li><li><a href="./../v2/boxes.html">Boxes</a></li><li><a href="./../v2/provisioning/index.html">Provisioning</a></li><li><a href="./../v2/networking/index.html">Networking</a></li><li><a href="./../v2/synced-folders/index.html">Synced Folders</a></li><li><a href="./../v2/multi-machine/index.html">Multi-Machine</a></li><li><a href="./../v2/providers/index.html">Providers</a></li><li><a href="./../v2/virtualbox/index.html">VirtualBox</a></li><li><a href="./../v2/vmware/index.html">VMware</a></li><li><a href="./../v2/plugins/index.html">Plugins</a></li><li class=current><a href="./../v2/debugging.html">Debugging</a></li></ul></aside></div><div class="page-contents span9"><div class=page-background></div><div class=row><div class="span8 offset1"><h1>Debugging</h1><p>As much as we try to keep Vagrant stable and bug free, it is inevitable that issues will arise and Vagrant will behave in unexpected ways. In these cases, Vagrant has amazing <a href="//www.vagrantup.com/support.html">support</a> channels available to assist you.</p><p>When using these support channels, it is generally helpful to include debugging logs along with any error reports. These logs can often help you troubleshoot any problems you may be having.</p><p>To enable detailed logging, set the <code>VAGRANT_LOG</code> environmental variable to the desired log level name, which is one of <code>debug</code> (loud), <code>info</code> (normal), <code>warn</code> (quiet), and <code>error</code> (very quiet). When asking for support, please set this to <code>debug</code>. When troubleshooting your own issues, you should start with <code>info</code>, which is much quieter, but contains important information about the behavior of Vagrant.</p><p>On Linux and Mac systems, this can be done by prepending the <code>vagrant</code> command with an environmental variable declaration:</p><pre><code>$ VAGRANT_LOG=info vagrant up
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml">
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=US-ASCII" />
+    <title> Debugging and Troubleshooting - Vagrant Documentation</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <link href="./../stylesheets/bootstrap-2bdef9a2.css" media="screen" rel="stylesheet" />
+    <link href="./../stylesheets/vagrantup-d5d54c59.css" media="screen" rel="stylesheet" />
+    <script src="./../javascripts/jquery-08c11650.js"></script>
+    <script src="./../javascripts/modernizr-84c0465a.js"></script>
+    <script src="./../javascripts/bootstrap.min-98cc7a22.js"></script>
+    <script src="./../javascripts/backstretch-3d1212ad.js"></script>
+    <script src="./../javascripts/vagrantup-03aae2a8.js"></script>
+    <link href="./..//fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet" />
+    <script src="./..//use.typekit.net/xfs6zus.js"></script>
+    <script>
+<![CDATA[try{Typekit.load();}catch(e){}]]>
+    </script>
+  </head>
+  <body>
+    <div class="wrapper">
+      <nav class="docs">
+        <a class="vagrant-docs-logo" href="./../">Vagrant Documentation</a>
+        <ul class="pull-right unstyled">
+          <li>
+            <a href="./..//www.vagrantup.com/">Home</a>
+          </li>
+        </ul>
+      </nav>
+      <div class="page docs docs-home">
+        <div class="container">
+          <div class="row">
+            <div class="sidebar span3">
+              <aside class="sidebar-nav">
+                <div class="toggle hidden-desktop">
+                  <div class="open-close open"></div>
+                  <a href="#">Contents</a>
+                </div>
+                <ul class="unstyled">
+                  <li>
+                    <a href="./../v2/">Overview</a>
+                  </li>
+                  <li>
+                    <a href="./../v2/why-vagrant/index.html">Why Vagrant?</a>
+                  </li>
+                  <li>
+                    <a href="./../v2/installation/index.html">Installation</a>
+                  </li>
+                  <li>
+                    <a href="./../v2/getting-started/index.html">Getting Started</a>
+                  </li>
+                  <li>
+                    <a href="./../v2/cli/index.html">Command-Line Interface</a>
+                  </li>
+                  <li>
+                    <a href="./../v2/vagrantfile/index.html">Vagrantfile</a>
+                  </li>
+                  <li>
+                    <a href="./../v2/boxes.html">Boxes</a>
+                  </li>
+                  <li>
+                    <a href="./../v2/provisioning/index.html">Provisioning</a>
+                  </li>
+                  <li>
+                    <a href="./../v2/networking/index.html">Networking</a>
+                  </li>
+                  <li>
+                    <a href="./../v2/synced-folders/index.html">Synced Folders</a>
+                  </li>
+                  <li>
+                    <a href="./../v2/multi-machine/index.html">Multi-Machine</a>
+                  </li>
+                  <li>
+                    <a href="./../v2/providers/index.html">Providers</a>
+                  </li>
+                  <li>
+                    <a href="./../v2/virtualbox/index.html">VirtualBox</a>
+                  </li>
+                  <li>
+                    <a href="./../v2/vmware/index.html">VMware</a>
+                  </li>
+                  <li>
+                    <a href="./../v2/plugins/index.html">Plugins</a>
+                  </li>
+                  <li class="current">
+                    <a href="./../v2/debugging.html">Debugging</a>
+                  </li>
+                </ul>
+              </aside>
+            </div>
+            <div class="page-contents span9">
+              <div class="page-background"></div>
+              <div class="row">
+                <div class="span8 offset1">
+                  <h1>Debugging</h1>
+                  <p>As much as we try to keep Vagrant stable and bug free, it is inevitable that issues will arise and Vagrant will behave in unexpected ways. In these cases, Vagrant has amazing <a href="./..//www.vagrantup.com/support.html">support</a> channels available to assist you.</p>
+                  <p>When using these support channels, it is generally helpful to include debugging logs along with any error reports. These logs can often help you troubleshoot any problems you may be having.</p>
+                  <p>To enable detailed logging, set the <code>VAGRANT_LOG</code> environmental variable to the desired log level name, which is one of <code>debug</code> (loud), <code>info</code> (normal), <code>warn</code> (quiet), and <code>error</code> (very quiet). When asking for support, please set this to <code>debug</code>. When troubleshooting your own issues, you should start with <code>info</code>, which is much quieter, but contains important information about the behavior of Vagrant.</p>
+                  <p>On Linux and Mac systems, this can be done by prepending the <code>vagrant</code> command with an environmental variable declaration:</p>
+                  <pre>
+                    <code>$ VAGRANT_LOG=info vagrant up
 ...
-</code></pre><p>On Windows, multiple steps are required:</p><pre><code>$ set VAGRANT_LOG=info
+</code>
+                  </pre>
+                  <p>On Windows, multiple steps are required:</p>
+                  <pre>
+                    <code>$ set VAGRANT_LOG=info
 $ vagrant up
 ...
-</code></pre><p>If you plan on submitting a bug report, please submit debug-level logs along with the report using <a href="https://gist.github.com/">gist</a> or some other paste service.</p></div></div></div></div></div></div><footer><div class=container><div class=row><div class=span12><ul class="unstyled footer-nav"><li><a href="//docs.vagrantup.com/">Documentation</a></li><li><a href="//www.vagrantup.com/about">About</a></li><li><a href="//www.vagrantup.com/support">Support</a></li><a href="//downloads.vagrantup.com/"><li class="button inline-button">Download</li></a></ul><ul class="unstyled logos"><a href="//www.vagrantup.com"><li class=vagrant-logo-monochrome></li></a><li><span>by</span></li><a href="//www.hashicorp.com"><li class="hashi-logo-monochrome "></li></a></ul></div></div><div class=row><h6 class=legal> &#169; 2013 HashiCorp </h6></div></div></footer></div><script>
+</code>
+                  </pre>
+                  <p>If you plan on submitting a bug report, please submit debug-level logs along with the report using <a href="https://gist.github.com/">gist</a> or some other paste service.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <footer>
+        <div class="container">
+          <div class="row">
+            <div class="span12">
+              <ul class="unstyled footer-nav">
+                <li>
+                  <a href="./..//docs.vagrantup.com/">Documentation</a>
+                </li>
+                <li>
+                  <a href="./..//www.vagrantup.com/about">About</a>
+                </li>
+                <li>
+                  <a href="./..//www.vagrantup.com/support">Support</a>
+                </li>
+                <a href="./..//downloads.vagrantup.com/">
+                  <li class="button inline-button">Download</li>
+                </a>
+              </ul>
+              <ul class="unstyled logos">
+                <a href="./..//www.vagrantup.com">
+                  <li class="vagrant-logo-monochrome"></li>
+                </a>
+                <li>
+                  <span>by</span>
+                </li>
+                <a href="./..//www.hashicorp.com">
+                  <li class="hashi-logo-monochrome "></li>
+                </a>
+              </ul>
+            </div>
+          </div>
+          <div class="row">
+            <h6 class="legal"> &#169; 2013 HashiCorp </h6>
+          </div>
+        </div>
+      </footer>
+    </div>
+    <script>
+<![CDATA[
 			$(".big-background").backstretch("assets/photos/full_width.jpg");
-		</script></body></html>
+		]]>
+    </script>
+  </body>
+</html>
