--- a/docsets/Vagrant.docset/Contents/Resources/Documents/v2/getting-started/index.html
+++ b/docsets/Vagrant.docset/Contents/Resources/Documents/v2/getting-started/index.html
@@ -1,5 +1,187 @@
-<!DOCTYPE html><html><head><title> Getting Started - Vagrant Documentation</title><meta name=viewport content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"><link href="./../../stylesheets/bootstrap-2bdef9a2.css" media=screen rel=stylesheet /><link href="./../../stylesheets/vagrantup-d5d54c59.css" media=screen rel=stylesheet /><script src="./../../javascripts/jquery-08c11650.js"></script><script src="./../../javascripts/modernizr-84c0465a.js"></script><script src="./../../javascripts/bootstrap.min-98cc7a22.js"></script><script src="./../../javascripts/backstretch-3d1212ad.js"></script><script src="./../../javascripts/vagrantup-03aae2a8.js"></script><link href='//fonts.googleapis.com/css?family=Inconsolata' rel=stylesheet><script src="//use.typekit.net/xfs6zus.js"></script><script>try{Typekit.load();}catch(e){}</script></head><body><div class=wrapper><nav class=docs><a class=vagrant-docs-logo href="/">Vagrant Documentation</a><ul class="pull-right unstyled"><li><a href="//www.vagrantup.com/">Home</a></li></ul></nav><div class="page docs docs-home"><div class=container><div class=row><div class="sidebar span3"><aside class=sidebar-nav><div class="toggle hidden-desktop"><div class="open-close open"></div><a href="#">Contents</a></div><ul class=unstyled><li><a href="./../../v2/">Overview</a></li><li><a href="./../../v2/why-vagrant/index.html">Why Vagrant?</a></li><li><a href="./../../v2/installation/index.html">Installation</a></li><li class=current><a href="./../../v2/getting-started/index.html">Getting Started</a></li><ul class="sub unstyled"><li><a href="./../../v2/getting-started/project_setup.html">Project Setup</a></li><li><a href="./../../v2/getting-started/boxes.html">Boxes</a></li><li><a href="./../../v2/getting-started/up.html">Up and SSH</a></li><li><a href="./../../v2/getting-started/synced_folders.html">Synced Folders</a></li><li><a href="./../../v2/getting-started/provisioning.html">Provisioning</a></li><li><a href="./../../v2/getting-started/networking.html">Networking</a></li><li><a href="./../../v2/getting-started/teardown.html">Teardown</a></li><li><a href="./../../v2/getting-started/rebuild.html">Rebuild</a></li><li><a href="./../../v2/getting-started/providers.html">Providers</a></li></ul><li><a href="./../../v2/cli/index.html">Command-Line Interface</a></li><li><a href="./../../v2/vagrantfile/index.html">Vagrantfile</a></li><li><a href="./../../v2/boxes.html">Boxes</a></li><li><a href="./../../v2/provisioning/index.html">Provisioning</a></li><li><a href="./../../v2/networking/index.html">Networking</a></li><li><a href="./../../v2/synced-folders/index.html">Synced Folders</a></li><li><a href="./../../v2/multi-machine/index.html">Multi-Machine</a></li><li><a href="./../../v2/providers/index.html">Providers</a></li><li><a href="./../../v2/virtualbox/index.html">VirtualBox</a></li><li><a href="./../../v2/vmware/index.html">VMware</a></li><li><a href="./../../v2/plugins/index.html">Plugins</a></li><li><a href="./../../v2/debugging.html">Debugging</a></li></ul></aside></div><div class="page-contents span9"><div class=page-background></div><div class=row><div class="span8 offset1"><h1>Getting Started</h1><p>The Vagrant getting started guide will walk you through your first Vagrant project, and show off the basics of the major features Vagrant has to offer.</p><p>Before diving into your first project, please <a href="./../../v2/installation/">install Vagrant</a>. And if you&#39;re curious what benefits Vagrant has to offer, you should also read the <a href="./../../v2/why-vagrant/">&quot;Why Vagrant?&quot;</a> page.</p><p>The getting started guide will use Vagrant with <a href="//www.virtualbox.org">VirtualBox</a>, since it is free, available on every major platform, and built-in to Vagrant. After reading the guide though, don&#39;t forget that Vagrant can work with <a href="./../../v2/getting-started/providers.html">many other providers</a>.</p><h2>Up and Running</h2><pre><code>$ vagrant init precise32 http://files.vagrantup.com/precise32.box
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml">
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=US-ASCII" />
+    <title> Getting Started - Vagrant Documentation</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <link href="./../../stylesheets/bootstrap-2bdef9a2.css" media="screen" rel="stylesheet" />
+    <link href="./../../stylesheets/vagrantup-d5d54c59.css" media="screen" rel="stylesheet" />
+    <script src="./../../javascripts/jquery-08c11650.js"></script>
+    <script src="./../../javascripts/modernizr-84c0465a.js"></script>
+    <script src="./../../javascripts/bootstrap.min-98cc7a22.js"></script>
+    <script src="./../../javascripts/backstretch-3d1212ad.js"></script>
+    <script src="./../../javascripts/vagrantup-03aae2a8.js"></script>
+    <link href="./../..//fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet" />
+    <script src="./../..//use.typekit.net/xfs6zus.js"></script>
+    <script>
+<![CDATA[try{Typekit.load();}catch(e){}]]>
+    </script>
+  </head>
+  <body>
+    <div class="wrapper">
+      <nav class="docs">
+        <a class="vagrant-docs-logo" href="./../../">Vagrant Documentation</a>
+        <ul class="pull-right unstyled">
+          <li>
+            <a href="./../..//www.vagrantup.com/">Home</a>
+          </li>
+        </ul>
+      </nav>
+      <div class="page docs docs-home">
+        <div class="container">
+          <div class="row">
+            <div class="sidebar span3">
+              <aside class="sidebar-nav">
+                <div class="toggle hidden-desktop">
+                  <div class="open-close open"></div>
+                  <a href="#">Contents</a>
+                </div>
+                <ul class="unstyled">
+                  <li>
+                    <a href="./../../v2/">Overview</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/why-vagrant/index.html">Why Vagrant?</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/installation/index.html">Installation</a>
+                  </li>
+                  <li class="current">
+                    <a href="./../../v2/getting-started/index.html">Getting Started</a>
+                  </li>
+                  <ul class="sub unstyled">
+                    <li>
+                      <a href="./../../v2/getting-started/project_setup.html">Project Setup</a>
+                    </li>
+                    <li>
+                      <a href="./../../v2/getting-started/boxes.html">Boxes</a>
+                    </li>
+                    <li>
+                      <a href="./../../v2/getting-started/up.html">Up and SSH</a>
+                    </li>
+                    <li>
+                      <a href="./../../v2/getting-started/synced_folders.html">Synced Folders</a>
+                    </li>
+                    <li>
+                      <a href="./../../v2/getting-started/provisioning.html">Provisioning</a>
+                    </li>
+                    <li>
+                      <a href="./../../v2/getting-started/networking.html">Networking</a>
+                    </li>
+                    <li>
+                      <a href="./../../v2/getting-started/teardown.html">Teardown</a>
+                    </li>
+                    <li>
+                      <a href="./../../v2/getting-started/rebuild.html">Rebuild</a>
+                    </li>
+                    <li>
+                      <a href="./../../v2/getting-started/providers.html">Providers</a>
+                    </li>
+                  </ul>
+                  <li>
+                    <a href="./../../v2/cli/index.html">Command-Line Interface</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/vagrantfile/index.html">Vagrantfile</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/boxes.html">Boxes</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/provisioning/index.html">Provisioning</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/networking/index.html">Networking</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/synced-folders/index.html">Synced Folders</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/multi-machine/index.html">Multi-Machine</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/providers/index.html">Providers</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/virtualbox/index.html">VirtualBox</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/vmware/index.html">VMware</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/plugins/index.html">Plugins</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/debugging.html">Debugging</a>
+                  </li>
+                </ul>
+              </aside>
+            </div>
+            <div class="page-contents span9">
+              <div class="page-background"></div>
+              <div class="row">
+                <div class="span8 offset1">
+                  <h1>Getting Started</h1>
+                  <p>The Vagrant getting started guide will walk you through your first Vagrant project, and show off the basics of the major features Vagrant has to offer.</p>
+                  <p>Before diving into your first project, please <a href="./../../v2/installation/">install Vagrant</a>. And if you're curious what benefits Vagrant has to offer, you should also read the <a href="./../../v2/why-vagrant/">"Why Vagrant?"</a> page.</p>
+                  <p>The getting started guide will use Vagrant with <a href="./../..//www.virtualbox.org">VirtualBox</a>, since it is free, available on every major platform, and built-in to Vagrant. After reading the guide though, don't forget that Vagrant can work with <a href="./../../v2/getting-started/providers.html">many other providers</a>.</p>
+                  <h2>Up and Running</h2>
+                  <pre>
+                    <code>$ vagrant init precise32 http://files.vagrantup.com/precise32.box
 $ vagrant up
-</code></pre><p>After running the above two commands, you&#39;ll have a fully running virtual machine in <a href="//virtualbox.org">VirtualBox</a> running Ubuntu 12.04 LTS 32-bit. You can SSH into this machine with <code>vagrant ssh</code>, and when you&#39;re done playing around, you can remove all traces of it with <code>vagrant destroy</code>.</p><p>Now imagine every project you&#39;ve ever worked on being this easy to set up.</p><p>With Vagrant, <code>vagrant up</code> is all you need to work on any project, to install every dependency that project needs, and to setup any networking and synced folders so you can continue working from the comfort of your own machine.</p><p>The rest of this guide will walk you through setting up a more complete project, covering more features of Vagrant.</p></div></div></div></div></div></div><footer><div class=container><div class=row><div class=span12><ul class="unstyled footer-nav"><li><a href="//docs.vagrantup.com/">Documentation</a></li><li><a href="//www.vagrantup.com/about">About</a></li><li><a href="//www.vagrantup.com/support">Support</a></li><a href="//downloads.vagrantup.com/"><li class="button inline-button">Download</li></a></ul><ul class="unstyled logos"><a href="//www.vagrantup.com"><li class=vagrant-logo-monochrome></li></a><li><span>by</span></li><a href="//www.hashicorp.com"><li class="hashi-logo-monochrome "></li></a></ul></div></div><div class=row><h6 class=legal> &#169; 2013 HashiCorp </h6></div></div></footer></div><script>
+</code>
+                  </pre>
+                  <p>After running the above two commands, you'll have a fully running virtual machine in <a href="./../..//virtualbox.org">VirtualBox</a> running Ubuntu 12.04 LTS 32-bit. You can SSH into this machine with <code>vagrant ssh</code>, and when you're done playing around, you can remove all traces of it with <code>vagrant destroy</code>.</p>
+                  <p>Now imagine every project you've ever worked on being this easy to set up.</p>
+                  <p>With Vagrant, <code>vagrant up</code> is all you need to work on any project, to install every dependency that project needs, and to setup any networking and synced folders so you can continue working from the comfort of your own machine.</p>
+                  <p>The rest of this guide will walk you through setting up a more complete project, covering more features of Vagrant.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <footer>
+        <div class="container">
+          <div class="row">
+            <div class="span12">
+              <ul class="unstyled footer-nav">
+                <li>
+                  <a href="./../..//docs.vagrantup.com/">Documentation</a>
+                </li>
+                <li>
+                  <a href="./../..//www.vagrantup.com/about">About</a>
+                </li>
+                <li>
+                  <a href="./../..//www.vagrantup.com/support">Support</a>
+                </li>
+                <a href="./../..//downloads.vagrantup.com/">
+                  <li class="button inline-button">Download</li>
+                </a>
+              </ul>
+              <ul class="unstyled logos">
+                <a href="./../..//www.vagrantup.com">
+                  <li class="vagrant-logo-monochrome"></li>
+                </a>
+                <li>
+                  <span>by</span>
+                </li>
+                <a href="./../..//www.hashicorp.com">
+                  <li class="hashi-logo-monochrome "></li>
+                </a>
+              </ul>
+            </div>
+          </div>
+          <div class="row">
+            <h6 class="legal"> &#169; 2013 HashiCorp </h6>
+          </div>
+        </div>
+      </footer>
+    </div>
+    <script>
+<![CDATA[
 			$(".big-background").backstretch("assets/photos/full_width.jpg");
-		</script></body></html>
+		]]>
+    </script>
+  </body>
+</html>
