--- a/docsets/Vagrant.docset/Contents/Resources/Documents/v2/getting-started/project_setup.html
+++ b/docsets/Vagrant.docset/Contents/Resources/Documents/v2/getting-started/project_setup.html
@@ -1,6 +1,193 @@
-<!DOCTYPE html><html><head><title> Project Setup - Getting Started - Vagrant Documentation</title><meta name=viewport content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"><link href="./../../stylesheets/bootstrap-2bdef9a2.css" media=screen rel=stylesheet /><link href="./../../stylesheets/vagrantup-d5d54c59.css" media=screen rel=stylesheet /><script src="./../../javascripts/jquery-08c11650.js"></script><script src="./../../javascripts/modernizr-84c0465a.js"></script><script src="./../../javascripts/bootstrap.min-98cc7a22.js"></script><script src="./../../javascripts/backstretch-3d1212ad.js"></script><script src="./../../javascripts/vagrantup-03aae2a8.js"></script><link href='//fonts.googleapis.com/css?family=Inconsolata' rel=stylesheet><script src="//use.typekit.net/xfs6zus.js"></script><script>try{Typekit.load();}catch(e){}</script></head><body><div class=wrapper><nav class=docs><a class=vagrant-docs-logo href="/">Vagrant Documentation</a><ul class="pull-right unstyled"><li><a href="//www.vagrantup.com/">Home</a></li></ul></nav><div class="page docs docs-home"><div class=container><div class=row><div class="sidebar span3"><aside class=sidebar-nav><div class="toggle hidden-desktop"><div class="open-close open"></div><a href="#">Contents</a></div><ul class=unstyled><li><a href="./../../v2/">Overview</a></li><li><a href="./../../v2/why-vagrant/index.html">Why Vagrant?</a></li><li><a href="./../../v2/installation/index.html">Installation</a></li><li class=current><a href="./../../v2/getting-started/index.html">Getting Started</a></li><ul class="sub unstyled"><li class=current><a href="./../../v2/getting-started/project_setup.html">Project Setup</a></li><li><a href="./../../v2/getting-started/boxes.html">Boxes</a></li><li><a href="./../../v2/getting-started/up.html">Up and SSH</a></li><li><a href="./../../v2/getting-started/synced_folders.html">Synced Folders</a></li><li><a href="./../../v2/getting-started/provisioning.html">Provisioning</a></li><li><a href="./../../v2/getting-started/networking.html">Networking</a></li><li><a href="./../../v2/getting-started/teardown.html">Teardown</a></li><li><a href="./../../v2/getting-started/rebuild.html">Rebuild</a></li><li><a href="./../../v2/getting-started/providers.html">Providers</a></li></ul><li><a href="./../../v2/cli/index.html">Command-Line Interface</a></li><li><a href="./../../v2/vagrantfile/index.html">Vagrantfile</a></li><li><a href="./../../v2/boxes.html">Boxes</a></li><li><a href="./../../v2/provisioning/index.html">Provisioning</a></li><li><a href="./../../v2/networking/index.html">Networking</a></li><li><a href="./../../v2/synced-folders/index.html">Synced Folders</a></li><li><a href="./../../v2/multi-machine/index.html">Multi-Machine</a></li><li><a href="./../../v2/providers/index.html">Providers</a></li><li><a href="./../../v2/virtualbox/index.html">VirtualBox</a></li><li><a href="./../../v2/vmware/index.html">VMware</a></li><li><a href="./../../v2/plugins/index.html">Plugins</a></li><li><a href="./../../v2/debugging.html">Debugging</a></li></ul></aside></div><div class="page-contents span9"><div class=page-background></div><div class=row><div class="span8 offset1"><h1>Project Setup</h1><p>The first step for any project to use Vagrant is to configure Vagrant using a <a href="./../../v2/vagrantfile/">Vagrantfile</a>. The purpose of the Vagrantfile is twofold:</p><ol><li><p>Mark the root directory of your project. A lot of the configuration of Vagrant is relative to this root directory.</p></li><li><p>Describe the kind of machine and resources you need to run your project, as well as what software to install and how you want to access it.</p></li></ol><p>Vagrant has a built-in command for initializing a directory for usage with Vagrant: <code>vagrant init</code>. For the purpose of this getting started guide, please follow along in your terminal:</p><pre><code>$ mkdir vagrant_getting_started
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml">
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=US-ASCII" />
+    <title> Project Setup - Getting Started - Vagrant Documentation</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <link href="./../../stylesheets/bootstrap-2bdef9a2.css" media="screen" rel="stylesheet" />
+    <link href="./../../stylesheets/vagrantup-d5d54c59.css" media="screen" rel="stylesheet" />
+    <script src="./../../javascripts/jquery-08c11650.js"></script>
+    <script src="./../../javascripts/modernizr-84c0465a.js"></script>
+    <script src="./../../javascripts/bootstrap.min-98cc7a22.js"></script>
+    <script src="./../../javascripts/backstretch-3d1212ad.js"></script>
+    <script src="./../../javascripts/vagrantup-03aae2a8.js"></script>
+    <link href="./../..//fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet" />
+    <script src="./../..//use.typekit.net/xfs6zus.js"></script>
+    <script>
+<![CDATA[try{Typekit.load();}catch(e){}]]>
+    </script>
+  </head>
+  <body>
+    <div class="wrapper">
+      <nav class="docs">
+        <a class="vagrant-docs-logo" href="./../../">Vagrant Documentation</a>
+        <ul class="pull-right unstyled">
+          <li>
+            <a href="./../..//www.vagrantup.com/">Home</a>
+          </li>
+        </ul>
+      </nav>
+      <div class="page docs docs-home">
+        <div class="container">
+          <div class="row">
+            <div class="sidebar span3">
+              <aside class="sidebar-nav">
+                <div class="toggle hidden-desktop">
+                  <div class="open-close open"></div>
+                  <a href="#">Contents</a>
+                </div>
+                <ul class="unstyled">
+                  <li>
+                    <a href="./../../v2/">Overview</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/why-vagrant/index.html">Why Vagrant?</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/installation/index.html">Installation</a>
+                  </li>
+                  <li class="current">
+                    <a href="./../../v2/getting-started/index.html">Getting Started</a>
+                  </li>
+                  <ul class="sub unstyled">
+                    <li class="current">
+                      <a href="./../../v2/getting-started/project_setup.html">Project Setup</a>
+                    </li>
+                    <li>
+                      <a href="./../../v2/getting-started/boxes.html">Boxes</a>
+                    </li>
+                    <li>
+                      <a href="./../../v2/getting-started/up.html">Up and SSH</a>
+                    </li>
+                    <li>
+                      <a href="./../../v2/getting-started/synced_folders.html">Synced Folders</a>
+                    </li>
+                    <li>
+                      <a href="./../../v2/getting-started/provisioning.html">Provisioning</a>
+                    </li>
+                    <li>
+                      <a href="./../../v2/getting-started/networking.html">Networking</a>
+                    </li>
+                    <li>
+                      <a href="./../../v2/getting-started/teardown.html">Teardown</a>
+                    </li>
+                    <li>
+                      <a href="./../../v2/getting-started/rebuild.html">Rebuild</a>
+                    </li>
+                    <li>
+                      <a href="./../../v2/getting-started/providers.html">Providers</a>
+                    </li>
+                  </ul>
+                  <li>
+                    <a href="./../../v2/cli/index.html">Command-Line Interface</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/vagrantfile/index.html">Vagrantfile</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/boxes.html">Boxes</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/provisioning/index.html">Provisioning</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/networking/index.html">Networking</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/synced-folders/index.html">Synced Folders</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/multi-machine/index.html">Multi-Machine</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/providers/index.html">Providers</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/virtualbox/index.html">VirtualBox</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/vmware/index.html">VMware</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/plugins/index.html">Plugins</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/debugging.html">Debugging</a>
+                  </li>
+                </ul>
+              </aside>
+            </div>
+            <div class="page-contents span9">
+              <div class="page-background"></div>
+              <div class="row">
+                <div class="span8 offset1">
+                  <h1>Project Setup</h1>
+                  <p>The first step for any project to use Vagrant is to configure Vagrant using a <a href="./../../v2/vagrantfile/">Vagrantfile</a>. The purpose of the Vagrantfile is twofold:</p>
+                  <ol>
+                    <li>
+                      <p>Mark the root directory of your project. A lot of the configuration of Vagrant is relative to this root directory.</p>
+                    </li>
+                    <li>
+                      <p>Describe the kind of machine and resources you need to run your project, as well as what software to install and how you want to access it.</p>
+                    </li>
+                  </ol>
+                  <p>Vagrant has a built-in command for initializing a directory for usage with Vagrant: <code>vagrant init</code>. For the purpose of this getting started guide, please follow along in your terminal:</p>
+                  <pre>
+                    <code>$ mkdir vagrant_getting_started
 $ cd vagrant_getting_started
 $ vagrant init
-</code></pre><p>This will place a <code>Vagrantfile</code> in your current directory. You can take a look at the Vagrantfile if you want, it is filled with comments and examples. Don&#39;t be afraid if it looks intimidating, we&#39;ll modify it soon enough.</p><p>You can also run <code>vagrant init</code> in a pre-existing directory to setup Vagrant for an existing project.</p><p>The Vagrantfile is meant to be committed to version control with your project, if you use version control. This way, every person working with that project can benefit from Vagrant without any upfront work.</p></div></div></div></div></div></div><footer><div class=container><div class=row><div class=span12><ul class="unstyled footer-nav"><li><a href="//docs.vagrantup.com/">Documentation</a></li><li><a href="//www.vagrantup.com/about">About</a></li><li><a href="//www.vagrantup.com/support">Support</a></li><a href="//downloads.vagrantup.com/"><li class="button inline-button">Download</li></a></ul><ul class="unstyled logos"><a href="//www.vagrantup.com"><li class=vagrant-logo-monochrome></li></a><li><span>by</span></li><a href="//www.hashicorp.com"><li class="hashi-logo-monochrome "></li></a></ul></div></div><div class=row><h6 class=legal> &#169; 2013 HashiCorp </h6></div></div></footer></div><script>
+</code>
+                  </pre>
+                  <p>This will place a <code>Vagrantfile</code> in your current directory. You can take a look at the Vagrantfile if you want, it is filled with comments and examples. Don't be afraid if it looks intimidating, we'll modify it soon enough.</p>
+                  <p>You can also run <code>vagrant init</code> in a pre-existing directory to setup Vagrant for an existing project.</p>
+                  <p>The Vagrantfile is meant to be committed to version control with your project, if you use version control. This way, every person working with that project can benefit from Vagrant without any upfront work.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <footer>
+        <div class="container">
+          <div class="row">
+            <div class="span12">
+              <ul class="unstyled footer-nav">
+                <li>
+                  <a href="./../..//docs.vagrantup.com/">Documentation</a>
+                </li>
+                <li>
+                  <a href="./../..//www.vagrantup.com/about">About</a>
+                </li>
+                <li>
+                  <a href="./../..//www.vagrantup.com/support">Support</a>
+                </li>
+                <a href="./../..//downloads.vagrantup.com/">
+                  <li class="button inline-button">Download</li>
+                </a>
+              </ul>
+              <ul class="unstyled logos">
+                <a href="./../..//www.vagrantup.com">
+                  <li class="vagrant-logo-monochrome"></li>
+                </a>
+                <li>
+                  <span>by</span>
+                </li>
+                <a href="./../..//www.hashicorp.com">
+                  <li class="hashi-logo-monochrome "></li>
+                </a>
+              </ul>
+            </div>
+          </div>
+          <div class="row">
+            <h6 class="legal"> &#169; 2013 HashiCorp </h6>
+          </div>
+        </div>
+      </footer>
+    </div>
+    <script>
+<![CDATA[
 			$(".big-background").backstretch("assets/photos/full_width.jpg");
-		</script></body></html>
+		]]>
+    </script>
+  </body>
+</html>
