--- a/docsets/Vagrant.docset/Contents/Resources/Documents/v2/plugins/commands.html
+++ b/docsets/Vagrant.docset/Contents/Resources/Documents/v2/plugins/commands.html
@@ -1,30 +1,236 @@
-<!DOCTYPE html><html><head><title> Command Plugins - Plugin Development - Vagrant Documentation</title><meta name=viewport content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"><link href="./../../stylesheets/bootstrap-2bdef9a2.css" media=screen rel=stylesheet /><link href="./../../stylesheets/vagrantup-d5d54c59.css" media=screen rel=stylesheet /><script src="./../../javascripts/jquery-08c11650.js"></script><script src="./../../javascripts/modernizr-84c0465a.js"></script><script src="./../../javascripts/bootstrap.min-98cc7a22.js"></script><script src="./../../javascripts/backstretch-3d1212ad.js"></script><script src="./../../javascripts/vagrantup-03aae2a8.js"></script><link href='//fonts.googleapis.com/css?family=Inconsolata' rel=stylesheet><script src="//use.typekit.net/xfs6zus.js"></script><script>try{Typekit.load();}catch(e){}</script></head><body><div class=wrapper><nav class=docs><a class=vagrant-docs-logo href="/">Vagrant Documentation</a><ul class="pull-right unstyled"><li><a href="//www.vagrantup.com/">Home</a></li></ul></nav><div class="page docs docs-home"><div class=container><div class=row><div class="sidebar span3"><aside class=sidebar-nav><div class="toggle hidden-desktop"><div class="open-close open"></div><a href="#">Contents</a></div><ul class=unstyled><li><a href="./../../v2/">Overview</a></li><li><a href="./../../v2/why-vagrant/index.html">Why Vagrant?</a></li><li><a href="./../../v2/installation/index.html">Installation</a></li><li><a href="./../../v2/getting-started/index.html">Getting Started</a></li><li><a href="./../../v2/cli/index.html">Command-Line Interface</a></li><li><a href="./../../v2/vagrantfile/index.html">Vagrantfile</a></li><li><a href="./../../v2/boxes.html">Boxes</a></li><li><a href="./../../v2/provisioning/index.html">Provisioning</a></li><li><a href="./../../v2/networking/index.html">Networking</a></li><li><a href="./../../v2/synced-folders/index.html">Synced Folders</a></li><li><a href="./../../v2/multi-machine/index.html">Multi-Machine</a></li><li><a href="./../../v2/providers/index.html">Providers</a></li><li><a href="./../../v2/virtualbox/index.html">VirtualBox</a></li><li><a href="./../../v2/vmware/index.html">VMware</a></li><li class=current><a href="./../../v2/plugins/index.html">Plugins</a></li><ul class="sub unstyled"><li><a href="./../../v2/plugins/usage.html">Usage</a></li><li><a href="./../../v2/plugins/development-basics.html">Plugin Development Basics</a></li><li class=current><a href="./../../v2/plugins/commands.html">Commands</a></li><li><a href="./../../v2/plugins/configuration.html">Configuration</a></li><li><a href="./../../v2/plugins/guests.html">Guests</a></li><li><a href="./../../v2/plugins/guest-capabilities.html">Guest Capabilities</a></li><li><a href="./../../v2/plugins/hosts.html">Hosts</a></li><li><a href="./../../v2/plugins/providers.html">Providers</a></li><li><a href="./../../v2/plugins/provisioners.html">Provisioners</a></li><li><a href="./../../v2/plugins/packaging.html">Packaging & Distribution</a></li></ul><li><a href="./../../v2/debugging.html">Debugging</a></li></ul></aside></div><div class="page-contents span9"><div class=page-background></div><div class=row><div class="span8 offset1"><h1>Plugin Development: Commands</h1><p>This page documents how to add new commands to Vagrant, invokable via <code>vagrant YOUR-COMMAND</code>. Prior to reading this, you should be familiar with the <a href="./../../v2/plugins/development-basics.html">plugin development basics</a>.</p><div class="alert alert-warn"><p><strong>Warning: Advanced Topic!</strong> Developing plugins is an advanced topic that only experienced Vagrant users who are reasonably comfortable with Ruby should approach. </p></div><h2>Definition Component</h2><p>Within the context of a plugin definition, new commands can be defined like so:</p><pre><code class="ruby">command &quot;foo&quot; do
-  require_relative &quot;command&quot;
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml">
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=US-ASCII" />
+    <title> Command Plugins - Plugin Development - Vagrant Documentation</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <link href="./../../stylesheets/bootstrap-2bdef9a2.css" media="screen" rel="stylesheet" />
+    <link href="./../../stylesheets/vagrantup-d5d54c59.css" media="screen" rel="stylesheet" />
+    <script src="./../../javascripts/jquery-08c11650.js"></script>
+    <script src="./../../javascripts/modernizr-84c0465a.js"></script>
+    <script src="./../../javascripts/bootstrap.min-98cc7a22.js"></script>
+    <script src="./../../javascripts/backstretch-3d1212ad.js"></script>
+    <script src="./../../javascripts/vagrantup-03aae2a8.js"></script>
+    <link href="./../..//fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet" />
+    <script src="./../..//use.typekit.net/xfs6zus.js"></script>
+    <script>
+<![CDATA[try{Typekit.load();}catch(e){}]]>
+    </script>
+  </head>
+  <body>
+    <div class="wrapper">
+      <nav class="docs">
+        <a class="vagrant-docs-logo" href="./../../">Vagrant Documentation</a>
+        <ul class="pull-right unstyled">
+          <li>
+            <a href="./../..//www.vagrantup.com/">Home</a>
+          </li>
+        </ul>
+      </nav>
+      <div class="page docs docs-home">
+        <div class="container">
+          <div class="row">
+            <div class="sidebar span3">
+              <aside class="sidebar-nav">
+                <div class="toggle hidden-desktop">
+                  <div class="open-close open"></div>
+                  <a href="#">Contents</a>
+                </div>
+                <ul class="unstyled">
+                  <li>
+                    <a href="./../../v2/">Overview</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/why-vagrant/index.html">Why Vagrant?</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/installation/index.html">Installation</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/getting-started/index.html">Getting Started</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/cli/index.html">Command-Line Interface</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/vagrantfile/index.html">Vagrantfile</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/boxes.html">Boxes</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/provisioning/index.html">Provisioning</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/networking/index.html">Networking</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/synced-folders/index.html">Synced Folders</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/multi-machine/index.html">Multi-Machine</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/providers/index.html">Providers</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/virtualbox/index.html">VirtualBox</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/vmware/index.html">VMware</a>
+                  </li>
+                  <li class="current">
+                    <a href="./../../v2/plugins/index.html">Plugins</a>
+                  </li>
+                  <ul class="sub unstyled">
+                    <li>
+                      <a href="./../../v2/plugins/usage.html">Usage</a>
+                    </li>
+                    <li>
+                      <a href="./../../v2/plugins/development-basics.html">Plugin Development Basics</a>
+                    </li>
+                    <li class="current">
+                      <a href="./../../v2/plugins/commands.html">Commands</a>
+                    </li>
+                    <li>
+                      <a href="./../../v2/plugins/configuration.html">Configuration</a>
+                    </li>
+                    <li>
+                      <a href="./../../v2/plugins/guests.html">Guests</a>
+                    </li>
+                    <li>
+                      <a href="./../../v2/plugins/guest-capabilities.html">Guest Capabilities</a>
+                    </li>
+                    <li>
+                      <a href="./../../v2/plugins/hosts.html">Hosts</a>
+                    </li>
+                    <li>
+                      <a href="./../../v2/plugins/providers.html">Providers</a>
+                    </li>
+                    <li>
+                      <a href="./../../v2/plugins/provisioners.html">Provisioners</a>
+                    </li>
+                    <li>
+                      <a href="./../../v2/plugins/packaging.html">Packaging &amp; Distribution</a>
+                    </li>
+                  </ul>
+                  <li>
+                    <a href="./../../v2/debugging.html">Debugging</a>
+                  </li>
+                </ul>
+              </aside>
+            </div>
+            <div class="page-contents span9">
+              <div class="page-background"></div>
+              <div class="row">
+                <div class="span8 offset1">
+                  <h1>Plugin Development: Commands</h1>
+                  <p>This page documents how to add new commands to Vagrant, invokable via <code>vagrant YOUR-COMMAND</code>. Prior to reading this, you should be familiar with the <a href="./../../v2/plugins/development-basics.html">plugin development basics</a>.</p>
+                  <div class="alert alert-warn">
+                    <p><strong>Warning: Advanced Topic!</strong> Developing plugins is an advanced topic that only experienced Vagrant users who are reasonably comfortable with Ruby should approach. </p>
+                  </div>
+                  <h2>Definition Component</h2>
+                  <p>Within the context of a plugin definition, new commands can be defined like so:</p>
+                  <pre>
+                    <code class="ruby">command "foo" do
+  require_relative "command"
   Command
 end
-</code></pre><p>Commands are defined with the <code>command</code> method, which takes as an argument the name of the command, in this case &quot;foo.&quot; This means the command will be invokable via <code>vagrant foo</code>. Then the block argument returns a class that implements the <code>Vagrant.plugin(2, :command)</code> interface.</p><h2>Implementation</h2><p>Implementations of commands should subclass <code>Vagrant.plugin(2, :command)</code>, which is a Vagrant method that will return the proper superclass for a version 2 command. The implementation itself is quite simple, since the class needs to only implement a single method: <code>execute</code>. Example:</p><pre><code class="ruby">class Command &lt; Vagrant.plugin(2, :command)
+</code>
+                  </pre>
+                  <p>Commands are defined with the <code>command</code> method, which takes as an argument the name of the command, in this case "foo." This means the command will be invokable via <code>vagrant foo</code>. Then the block argument returns a class that implements the <code>Vagrant.plugin(2, :command)</code> interface.</p>
+                  <h2>Implementation</h2>
+                  <p>Implementations of commands should subclass <code>Vagrant.plugin(2, :command)</code>, which is a Vagrant method that will return the proper superclass for a version 2 command. The implementation itself is quite simple, since the class needs to only implement a single method: <code>execute</code>. Example:</p>
+                  <pre>
+                    <code class="ruby">class Command &lt; Vagrant.plugin(2, :command)
   def execute
-    puts &quot;Hello!&quot;
+    puts "Hello!"
     0
   end
 end
-</code></pre><p>The <code>execute</code> method is called when the command is invoked, and it should return the exit status (0 for success, anything else for error).</p><p>This is a command at its simplest form. Of course, the command superclass gives you access to the Vagrant environment and provides some helpers to do common tasks such as command line parsing.</p><h2>Parsing Command-Line Options</h2><p>The <code>parse_options</code> method is available which will parse the command line for you. It takes an <a href="//ruby-doc.org/stdlib-1.9.3/libdoc/optparse/rdoc/OptionParser.html">OptionParser</a> as an argument, and adds some common elements to it such as the <code>--help</code> flag, automatically showing help if requested. View the API docs directly for more information.</p><p>This is recommended over raw parsing/manipulation of command line flags. The following is an example of parsing command line flags pulled directly from the built-in Vagrant <code>destroy</code> command:</p><pre><code class="ruby">options = {}
+</code>
+                  </pre>
+                  <p>The <code>execute</code> method is called when the command is invoked, and it should return the exit status (0 for success, anything else for error).</p>
+                  <p>This is a command at its simplest form. Of course, the command superclass gives you access to the Vagrant environment and provides some helpers to do common tasks such as command line parsing.</p>
+                  <h2>Parsing Command-Line Options</h2>
+                  <p>The <code>parse_options</code> method is available which will parse the command line for you. It takes an <a href="./../..//ruby-doc.org/stdlib-1.9.3/libdoc/optparse/rdoc/OptionParser.html">OptionParser</a> as an argument, and adds some common elements to it such as the <code>--help</code> flag, automatically showing help if requested. View the API docs directly for more information.</p>
+                  <p>This is recommended over raw parsing/manipulation of command line flags. The following is an example of parsing command line flags pulled directly from the built-in Vagrant <code>destroy</code> command:</p>
+                  <pre>
+                    <code class="ruby">options = {}
 options[:force] = false
 
 opts = OptionParser.new do |o|
-  o.banner = &quot;Usage: vagrant destroy [vm-name]&quot;
-  o.separator &quot;&quot;
+  o.banner = "Usage: vagrant destroy [vm-name]"
+  o.separator ""
 
-  o.on(&quot;-f&quot;, &quot;--force&quot;, &quot;Destroy without confirmation.&quot;) do |f|
+  o.on("-f", "--force", "Destroy without confirmation.") do |f|
     options[:force] = f
   end
 end
 
 # Parse the options
 argv = parse_options(opts)
-</code></pre><h2>Using Vagrant Machines</h2><p>The <code>with_target_vms</code> method is a helper that helps you interact with the machines that Vagrant manages in a standard Vagrant way. This method automatically does the right thing in the case of multi-machine environments, handling target machines on the command line (<code>vagrant foo my-vm</code>), etc. If you need to do any manipulation of a Vagrant machine, including SSH access, this helper should be used.</p><p>An example of using the helper, again pulled directly from the built-in <code>destroy</code> command:</p><pre><code class="ruby">with_target_vms(argv, :reverse =&gt; true) do |machine|
+</code>
+                  </pre>
+                  <h2>Using Vagrant Machines</h2>
+                  <p>The <code>with_target_vms</code> method is a helper that helps you interact with the machines that Vagrant manages in a standard Vagrant way. This method automatically does the right thing in the case of multi-machine environments, handling target machines on the command line (<code>vagrant foo my-vm</code>), etc. If you need to do any manipulation of a Vagrant machine, including SSH access, this helper should be used.</p>
+                  <p>An example of using the helper, again pulled directly from the built-in <code>destroy</code> command:</p>
+                  <pre>
+                    <code class="ruby">with_target_vms(argv, :reverse =&gt; true) do |machine|
   machine.action(:destroy)
 end
-</code></pre><p>In this case, it asks for the machines in reverse order and calls the destroy action on each of them. If a user says <code>vagrant destroy foo</code>, then the helper automatically only yields the <code>foo</code> machine. If no parameter is given and it is a multi-machine environment, every machine in the environment is yielded, and so on. It just does the right thing.</p><h2>Using the Raw Vagrant Environment</h2><p>The raw loaded <code>Vagrant::Environment</code> object is available with the &#39;@env&#39; instance variable.</p></div></div></div></div></div></div><footer><div class=container><div class=row><div class=span12><ul class="unstyled footer-nav"><li><a href="//docs.vagrantup.com/">Documentation</a></li><li><a href="//www.vagrantup.com/about">About</a></li><li><a href="//www.vagrantup.com/support">Support</a></li><a href="//downloads.vagrantup.com/"><li class="button inline-button">Download</li></a></ul><ul class="unstyled logos"><a href="//www.vagrantup.com"><li class=vagrant-logo-monochrome></li></a><li><span>by</span></li><a href="//www.hashicorp.com"><li class="hashi-logo-monochrome "></li></a></ul></div></div><div class=row><h6 class=legal> &#169; 2013 HashiCorp </h6></div></div></footer></div><script>
+</code>
+                  </pre>
+                  <p>In this case, it asks for the machines in reverse order and calls the destroy action on each of them. If a user says <code>vagrant destroy foo</code>, then the helper automatically only yields the <code>foo</code> machine. If no parameter is given and it is a multi-machine environment, every machine in the environment is yielded, and so on. It just does the right thing.</p>
+                  <h2>Using the Raw Vagrant Environment</h2>
+                  <p>The raw loaded <code>Vagrant::Environment</code> object is available with the '@env' instance variable.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <footer>
+        <div class="container">
+          <div class="row">
+            <div class="span12">
+              <ul class="unstyled footer-nav">
+                <li>
+                  <a href="./../..//docs.vagrantup.com/">Documentation</a>
+                </li>
+                <li>
+                  <a href="./../..//www.vagrantup.com/about">About</a>
+                </li>
+                <li>
+                  <a href="./../..//www.vagrantup.com/support">Support</a>
+                </li>
+                <a href="./../..//downloads.vagrantup.com/">
+                  <li class="button inline-button">Download</li>
+                </a>
+              </ul>
+              <ul class="unstyled logos">
+                <a href="./../..//www.vagrantup.com">
+                  <li class="vagrant-logo-monochrome"></li>
+                </a>
+                <li>
+                  <span>by</span>
+                </li>
+                <a href="./../..//www.hashicorp.com">
+                  <li class="hashi-logo-monochrome "></li>
+                </a>
+              </ul>
+            </div>
+          </div>
+          <div class="row">
+            <h6 class="legal"> &#169; 2013 HashiCorp </h6>
+          </div>
+        </div>
+      </footer>
+    </div>
+    <script>
+<![CDATA[
 			$(".big-background").backstretch("assets/photos/full_width.jpg");
-		</script></body></html>
+		]]>
+    </script>
+  </body>
+</html>
