--- a/docsets/Vagrant.docset/Contents/Resources/Documents/v2/plugins/guest-capabilities.html
+++ b/docsets/Vagrant.docset/Contents/Resources/Documents/v2/plugins/guest-capabilities.html
@@ -1,15 +1,218 @@
-<!DOCTYPE html><html><head><title> Guest Capabilities - Plugin Development - Vagrant Documentation</title><meta name=viewport content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"><link href="./../../stylesheets/bootstrap-2bdef9a2.css" media=screen rel=stylesheet /><link href="./../../stylesheets/vagrantup-d5d54c59.css" media=screen rel=stylesheet /><script src="./../../javascripts/jquery-08c11650.js"></script><script src="./../../javascripts/modernizr-84c0465a.js"></script><script src="./../../javascripts/bootstrap.min-98cc7a22.js"></script><script src="./../../javascripts/backstretch-3d1212ad.js"></script><script src="./../../javascripts/vagrantup-03aae2a8.js"></script><link href='//fonts.googleapis.com/css?family=Inconsolata' rel=stylesheet><script src="//use.typekit.net/xfs6zus.js"></script><script>try{Typekit.load();}catch(e){}</script></head><body><div class=wrapper><nav class=docs><a class=vagrant-docs-logo href="/">Vagrant Documentation</a><ul class="pull-right unstyled"><li><a href="//www.vagrantup.com/">Home</a></li></ul></nav><div class="page docs docs-home"><div class=container><div class=row><div class="sidebar span3"><aside class=sidebar-nav><div class="toggle hidden-desktop"><div class="open-close open"></div><a href="#">Contents</a></div><ul class=unstyled><li><a href="./../../v2/">Overview</a></li><li><a href="./../../v2/why-vagrant/index.html">Why Vagrant?</a></li><li><a href="./../../v2/installation/index.html">Installation</a></li><li><a href="./../../v2/getting-started/index.html">Getting Started</a></li><li><a href="./../../v2/cli/index.html">Command-Line Interface</a></li><li><a href="./../../v2/vagrantfile/index.html">Vagrantfile</a></li><li><a href="./../../v2/boxes.html">Boxes</a></li><li><a href="./../../v2/provisioning/index.html">Provisioning</a></li><li><a href="./../../v2/networking/index.html">Networking</a></li><li><a href="./../../v2/synced-folders/index.html">Synced Folders</a></li><li><a href="./../../v2/multi-machine/index.html">Multi-Machine</a></li><li><a href="./../../v2/providers/index.html">Providers</a></li><li><a href="./../../v2/virtualbox/index.html">VirtualBox</a></li><li><a href="./../../v2/vmware/index.html">VMware</a></li><li class=current><a href="./../../v2/plugins/index.html">Plugins</a></li><ul class="sub unstyled"><li><a href="./../../v2/plugins/usage.html">Usage</a></li><li><a href="./../../v2/plugins/development-basics.html">Plugin Development Basics</a></li><li><a href="./../../v2/plugins/commands.html">Commands</a></li><li><a href="./../../v2/plugins/configuration.html">Configuration</a></li><li><a href="./../../v2/plugins/guests.html">Guests</a></li><li class=current><a href="./../../v2/plugins/guest-capabilities.html">Guest Capabilities</a></li><li><a href="./../../v2/plugins/hosts.html">Hosts</a></li><li><a href="./../../v2/plugins/providers.html">Providers</a></li><li><a href="./../../v2/plugins/provisioners.html">Provisioners</a></li><li><a href="./../../v2/plugins/packaging.html">Packaging & Distribution</a></li></ul><li><a href="./../../v2/debugging.html">Debugging</a></li></ul></aside></div><div class="page-contents span9"><div class=page-background></div><div class=row><div class="span8 offset1"><h1>Plugin Development: Guest Capabilities</h1><p>This page documents how to add new capabilities for <a href="./../../v2/plugins/guests.html">guests</a> to Vagrant, allowing Vagrant to perform new actions on specific guest operating systems. Prior to reading this, you should be familiar with the <a href="./../../v2/plugins/development-basics.html">plugin development basics</a>.</p><div class="alert alert-warn"><p><strong>Warning: Advanced Topic!</strong> Developing plugins is an advanced topic that only experienced Vagrant users who are reasonably comfortable with Ruby should approach. </p></div><p>Guest capabilities augment <a href="./../../v2/plugins/guests.html">guests</a> by attaching specific &quot;capabilities&quot; to the guest, which are actions that can be performed in the context of that guest operating system.</p><p>The power of capabilities is that plugins can add new capabilities to existing guest operating systems without modifying the core of Vagrant. In earlier versions of Vagrant, all the guest logic was contained in the core of Vagrant and wasn&#39;t easily augmented.</p><h2>Definition Component</h2><p>Within the context of a plugin definition, guest capabilities can be defined like so:</p><pre><code class="ruby">guest_capability &quot;ubuntu&quot;, &quot;my_custom_capability&quot; do
-  require_relative &quot;cap/my_custom_capability&quot;
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml">
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=US-ASCII" />
+    <title> Guest Capabilities - Plugin Development - Vagrant Documentation</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <link href="./../../stylesheets/bootstrap-2bdef9a2.css" media="screen" rel="stylesheet" />
+    <link href="./../../stylesheets/vagrantup-d5d54c59.css" media="screen" rel="stylesheet" />
+    <script src="./../../javascripts/jquery-08c11650.js"></script>
+    <script src="./../../javascripts/modernizr-84c0465a.js"></script>
+    <script src="./../../javascripts/bootstrap.min-98cc7a22.js"></script>
+    <script src="./../../javascripts/backstretch-3d1212ad.js"></script>
+    <script src="./../../javascripts/vagrantup-03aae2a8.js"></script>
+    <link href="./../..//fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet" />
+    <script src="./../..//use.typekit.net/xfs6zus.js"></script>
+    <script>
+<![CDATA[try{Typekit.load();}catch(e){}]]>
+    </script>
+  </head>
+  <body>
+    <div class="wrapper">
+      <nav class="docs">
+        <a class="vagrant-docs-logo" href="./../../">Vagrant Documentation</a>
+        <ul class="pull-right unstyled">
+          <li>
+            <a href="./../..//www.vagrantup.com/">Home</a>
+          </li>
+        </ul>
+      </nav>
+      <div class="page docs docs-home">
+        <div class="container">
+          <div class="row">
+            <div class="sidebar span3">
+              <aside class="sidebar-nav">
+                <div class="toggle hidden-desktop">
+                  <div class="open-close open"></div>
+                  <a href="#">Contents</a>
+                </div>
+                <ul class="unstyled">
+                  <li>
+                    <a href="./../../v2/">Overview</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/why-vagrant/index.html">Why Vagrant?</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/installation/index.html">Installation</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/getting-started/index.html">Getting Started</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/cli/index.html">Command-Line Interface</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/vagrantfile/index.html">Vagrantfile</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/boxes.html">Boxes</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/provisioning/index.html">Provisioning</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/networking/index.html">Networking</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/synced-folders/index.html">Synced Folders</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/multi-machine/index.html">Multi-Machine</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/providers/index.html">Providers</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/virtualbox/index.html">VirtualBox</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/vmware/index.html">VMware</a>
+                  </li>
+                  <li class="current">
+                    <a href="./../../v2/plugins/index.html">Plugins</a>
+                  </li>
+                  <ul class="sub unstyled">
+                    <li>
+                      <a href="./../../v2/plugins/usage.html">Usage</a>
+                    </li>
+                    <li>
+                      <a href="./../../v2/plugins/development-basics.html">Plugin Development Basics</a>
+                    </li>
+                    <li>
+                      <a href="./../../v2/plugins/commands.html">Commands</a>
+                    </li>
+                    <li>
+                      <a href="./../../v2/plugins/configuration.html">Configuration</a>
+                    </li>
+                    <li>
+                      <a href="./../../v2/plugins/guests.html">Guests</a>
+                    </li>
+                    <li class="current">
+                      <a href="./../../v2/plugins/guest-capabilities.html">Guest Capabilities</a>
+                    </li>
+                    <li>
+                      <a href="./../../v2/plugins/hosts.html">Hosts</a>
+                    </li>
+                    <li>
+                      <a href="./../../v2/plugins/providers.html">Providers</a>
+                    </li>
+                    <li>
+                      <a href="./../../v2/plugins/provisioners.html">Provisioners</a>
+                    </li>
+                    <li>
+                      <a href="./../../v2/plugins/packaging.html">Packaging &amp; Distribution</a>
+                    </li>
+                  </ul>
+                  <li>
+                    <a href="./../../v2/debugging.html">Debugging</a>
+                  </li>
+                </ul>
+              </aside>
+            </div>
+            <div class="page-contents span9">
+              <div class="page-background"></div>
+              <div class="row">
+                <div class="span8 offset1">
+                  <h1>Plugin Development: Guest Capabilities</h1>
+                  <p>This page documents how to add new capabilities for <a href="./../../v2/plugins/guests.html">guests</a> to Vagrant, allowing Vagrant to perform new actions on specific guest operating systems. Prior to reading this, you should be familiar with the <a href="./../../v2/plugins/development-basics.html">plugin development basics</a>.</p>
+                  <div class="alert alert-warn">
+                    <p><strong>Warning: Advanced Topic!</strong> Developing plugins is an advanced topic that only experienced Vagrant users who are reasonably comfortable with Ruby should approach. </p>
+                  </div>
+                  <p>Guest capabilities augment <a href="./../../v2/plugins/guests.html">guests</a> by attaching specific "capabilities" to the guest, which are actions that can be performed in the context of that guest operating system.</p>
+                  <p>The power of capabilities is that plugins can add new capabilities to existing guest operating systems without modifying the core of Vagrant. In earlier versions of Vagrant, all the guest logic was contained in the core of Vagrant and wasn't easily augmented.</p>
+                  <h2>Definition Component</h2>
+                  <p>Within the context of a plugin definition, guest capabilities can be defined like so:</p>
+                  <pre>
+                    <code class="ruby">guest_capability "ubuntu", "my_custom_capability" do
+  require_relative "cap/my_custom_capability"
   Cap::MyCustomCapability
 end
-</code></pre><p>Guest capabilities are defined by calling the <code>guest_capability</code> method, which takes two parameters: the guest to add the capability to, and the name of the capability itself. Then, the block argument returns a class that implements a method named the same as the capability. This is coverd in more detail in the next section.</p><h2>Implementation</h2><p>Implementations should be classes or modules that have a method with the same name as the capability. The method must be immediately accessible on the class returned from the <code>guest_capability</code> component, meaning that if it is an instance method, an instance should be returned.</p><p>In general, class methods are used for capabilities. For example, here is the imlementation for the capability above:</p><pre><code class="ruby">module Cap
+</code>
+                  </pre>
+                  <p>Guest capabilities are defined by calling the <code>guest_capability</code> method, which takes two parameters: the guest to add the capability to, and the name of the capability itself. Then, the block argument returns a class that implements a method named the same as the capability. This is coverd in more detail in the next section.</p>
+                  <h2>Implementation</h2>
+                  <p>Implementations should be classes or modules that have a method with the same name as the capability. The method must be immediately accessible on the class returned from the <code>guest_capability</code> component, meaning that if it is an instance method, an instance should be returned.</p>
+                  <p>In general, class methods are used for capabilities. For example, here is the imlementation for the capability above:</p>
+                  <pre>
+                    <code class="ruby">module Cap
   class MyCustomCapability
     def self.my_custom_capability(machine)
       # implementation
     end
   end
 end
-</code></pre><p>All capabilities get the Vagrant machine object as the first argument. Additional arguments are deterined by the specific capability, so view the documentation or usage of the capability you&#39;re trying to implement for more information.</p><p>Some capabilities must also return values back to the caller, so be aware of that when implementing a capability.</p><p>Capabilities always have access to communication channels such as SSH on the machine, and the machine can generally be assumed to be booted.</p><h2>Calling Capabilities</h2><p>Since you have access to the machine in every capability, capabilities can also call <em>other</em> capabilities. This is useful for using the inheritance mechanism of capabilities to potentially ask helpers for more information. For example, the &quot;redhat&quot; guest has a &quot;network_scripts_dir&quot; capability that simply returns the directory where networking scripts go.</p><p>Capabilities on child guests of RedHat such as CentOS or Fedora use this capability to determine where networking scripts go, while sometimes overriding it themselves.</p><p>Capabilities can be called like so:</p><pre><code class="ruby">machine.guest.capability(:capability_name)
-</code></pre><p>Any additional arguments given to the method will be passed on to the capability, and the capability will return the value that the actual capability returned.</p></div></div></div></div></div></div><footer><div class=container><div class=row><div class=span12><ul class="unstyled footer-nav"><li><a href="//docs.vagrantup.com/">Documentation</a></li><li><a href="//www.vagrantup.com/about">About</a></li><li><a href="//www.vagrantup.com/support">Support</a></li><a href="//downloads.vagrantup.com/"><li class="button inline-button">Download</li></a></ul><ul class="unstyled logos"><a href="//www.vagrantup.com"><li class=vagrant-logo-monochrome></li></a><li><span>by</span></li><a href="//www.hashicorp.com"><li class="hashi-logo-monochrome "></li></a></ul></div></div><div class=row><h6 class=legal> &#169; 2013 HashiCorp </h6></div></div></footer></div><script>
+</code>
+                  </pre>
+                  <p>All capabilities get the Vagrant machine object as the first argument. Additional arguments are deterined by the specific capability, so view the documentation or usage of the capability you're trying to implement for more information.</p>
+                  <p>Some capabilities must also return values back to the caller, so be aware of that when implementing a capability.</p>
+                  <p>Capabilities always have access to communication channels such as SSH on the machine, and the machine can generally be assumed to be booted.</p>
+                  <h2>Calling Capabilities</h2>
+                  <p>Since you have access to the machine in every capability, capabilities can also call <em>other</em> capabilities. This is useful for using the inheritance mechanism of capabilities to potentially ask helpers for more information. For example, the "redhat" guest has a "network_scripts_dir" capability that simply returns the directory where networking scripts go.</p>
+                  <p>Capabilities on child guests of RedHat such as CentOS or Fedora use this capability to determine where networking scripts go, while sometimes overriding it themselves.</p>
+                  <p>Capabilities can be called like so:</p>
+                  <pre>
+                    <code class="ruby">machine.guest.capability(:capability_name)
+</code>
+                  </pre>
+                  <p>Any additional arguments given to the method will be passed on to the capability, and the capability will return the value that the actual capability returned.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <footer>
+        <div class="container">
+          <div class="row">
+            <div class="span12">
+              <ul class="unstyled footer-nav">
+                <li>
+                  <a href="./../..//docs.vagrantup.com/">Documentation</a>
+                </li>
+                <li>
+                  <a href="./../..//www.vagrantup.com/about">About</a>
+                </li>
+                <li>
+                  <a href="./../..//www.vagrantup.com/support">Support</a>
+                </li>
+                <a href="./../..//downloads.vagrantup.com/">
+                  <li class="button inline-button">Download</li>
+                </a>
+              </ul>
+              <ul class="unstyled logos">
+                <a href="./../..//www.vagrantup.com">
+                  <li class="vagrant-logo-monochrome"></li>
+                </a>
+                <li>
+                  <span>by</span>
+                </li>
+                <a href="./../..//www.hashicorp.com">
+                  <li class="hashi-logo-monochrome "></li>
+                </a>
+              </ul>
+            </div>
+          </div>
+          <div class="row">
+            <h6 class="legal"> &#169; 2013 HashiCorp </h6>
+          </div>
+        </div>
+      </footer>
+    </div>
+    <script>
+<![CDATA[
 			$(".big-background").backstretch("assets/photos/full_width.jpg");
-		</script></body></html>
+		]]>
+    </script>
+  </body>
+</html>
