--- a/docsets/Vagrant.docset/Contents/Resources/Documents/v2/plugins/hosts.html
+++ b/docsets/Vagrant.docset/Contents/Resources/Documents/v2/plugins/hosts.html
@@ -1,7 +1,194 @@
-<!DOCTYPE html><html><head><title> Custom Hosts - Plugin Development - Vagrant Documentation</title><meta name=viewport content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"><link href="./../../stylesheets/bootstrap-2bdef9a2.css" media=screen rel=stylesheet /><link href="./../../stylesheets/vagrantup-d5d54c59.css" media=screen rel=stylesheet /><script src="./../../javascripts/jquery-08c11650.js"></script><script src="./../../javascripts/modernizr-84c0465a.js"></script><script src="./../../javascripts/bootstrap.min-98cc7a22.js"></script><script src="./../../javascripts/backstretch-3d1212ad.js"></script><script src="./../../javascripts/vagrantup-03aae2a8.js"></script><link href='//fonts.googleapis.com/css?family=Inconsolata' rel=stylesheet><script src="//use.typekit.net/xfs6zus.js"></script><script>try{Typekit.load();}catch(e){}</script></head><body><div class=wrapper><nav class=docs><a class=vagrant-docs-logo href="/">Vagrant Documentation</a><ul class="pull-right unstyled"><li><a href="//www.vagrantup.com/">Home</a></li></ul></nav><div class="page docs docs-home"><div class=container><div class=row><div class="sidebar span3"><aside class=sidebar-nav><div class="toggle hidden-desktop"><div class="open-close open"></div><a href="#">Contents</a></div><ul class=unstyled><li><a href="./../../v2/">Overview</a></li><li><a href="./../../v2/why-vagrant/index.html">Why Vagrant?</a></li><li><a href="./../../v2/installation/index.html">Installation</a></li><li><a href="./../../v2/getting-started/index.html">Getting Started</a></li><li><a href="./../../v2/cli/index.html">Command-Line Interface</a></li><li><a href="./../../v2/vagrantfile/index.html">Vagrantfile</a></li><li><a href="./../../v2/boxes.html">Boxes</a></li><li><a href="./../../v2/provisioning/index.html">Provisioning</a></li><li><a href="./../../v2/networking/index.html">Networking</a></li><li><a href="./../../v2/synced-folders/index.html">Synced Folders</a></li><li><a href="./../../v2/multi-machine/index.html">Multi-Machine</a></li><li><a href="./../../v2/providers/index.html">Providers</a></li><li><a href="./../../v2/virtualbox/index.html">VirtualBox</a></li><li><a href="./../../v2/vmware/index.html">VMware</a></li><li class=current><a href="./../../v2/plugins/index.html">Plugins</a></li><ul class="sub unstyled"><li><a href="./../../v2/plugins/usage.html">Usage</a></li><li><a href="./../../v2/plugins/development-basics.html">Plugin Development Basics</a></li><li><a href="./../../v2/plugins/commands.html">Commands</a></li><li><a href="./../../v2/plugins/configuration.html">Configuration</a></li><li><a href="./../../v2/plugins/guests.html">Guests</a></li><li><a href="./../../v2/plugins/guest-capabilities.html">Guest Capabilities</a></li><li class=current><a href="./../../v2/plugins/hosts.html">Hosts</a></li><li><a href="./../../v2/plugins/providers.html">Providers</a></li><li><a href="./../../v2/plugins/provisioners.html">Provisioners</a></li><li><a href="./../../v2/plugins/packaging.html">Packaging & Distribution</a></li></ul><li><a href="./../../v2/debugging.html">Debugging</a></li></ul></aside></div><div class="page-contents span9"><div class=page-background></div><div class=row><div class="span8 offset1"><h1>Plugin Development: Hosts</h1><p>This page documents how to add new host OS implementations to Vagrant, allowing Vagrant to properly configure new host operating systems for features such as NFS shared folders. Prior to reading this, you should be familiar with the <a href="./../../v2/plugins/development-basics.html">plugin development basics</a>.</p><div class="alert alert-warn"><p><strong>Warning: Advanced Topic!</strong> Developing plugins is an advanced topic that only experienced Vagrant users who are reasonably comfortable with Ruby should approach. </p></div><h2>Definition Component</h2><p>Within the context of a plugin definition, new hosts can be defined like so:</p><pre><code class="ruby">host &quot;some_os&quot; do
-  require_relative &quot;host&quot;
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml">
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=US-ASCII" />
+    <title> Custom Hosts - Plugin Development - Vagrant Documentation</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <link href="./../../stylesheets/bootstrap-2bdef9a2.css" media="screen" rel="stylesheet" />
+    <link href="./../../stylesheets/vagrantup-d5d54c59.css" media="screen" rel="stylesheet" />
+    <script src="./../../javascripts/jquery-08c11650.js"></script>
+    <script src="./../../javascripts/modernizr-84c0465a.js"></script>
+    <script src="./../../javascripts/bootstrap.min-98cc7a22.js"></script>
+    <script src="./../../javascripts/backstretch-3d1212ad.js"></script>
+    <script src="./../../javascripts/vagrantup-03aae2a8.js"></script>
+    <link href="./../..//fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet" />
+    <script src="./../..//use.typekit.net/xfs6zus.js"></script>
+    <script>
+<![CDATA[try{Typekit.load();}catch(e){}]]>
+    </script>
+  </head>
+  <body>
+    <div class="wrapper">
+      <nav class="docs">
+        <a class="vagrant-docs-logo" href="./../../">Vagrant Documentation</a>
+        <ul class="pull-right unstyled">
+          <li>
+            <a href="./../..//www.vagrantup.com/">Home</a>
+          </li>
+        </ul>
+      </nav>
+      <div class="page docs docs-home">
+        <div class="container">
+          <div class="row">
+            <div class="sidebar span3">
+              <aside class="sidebar-nav">
+                <div class="toggle hidden-desktop">
+                  <div class="open-close open"></div>
+                  <a href="#">Contents</a>
+                </div>
+                <ul class="unstyled">
+                  <li>
+                    <a href="./../../v2/">Overview</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/why-vagrant/index.html">Why Vagrant?</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/installation/index.html">Installation</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/getting-started/index.html">Getting Started</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/cli/index.html">Command-Line Interface</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/vagrantfile/index.html">Vagrantfile</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/boxes.html">Boxes</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/provisioning/index.html">Provisioning</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/networking/index.html">Networking</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/synced-folders/index.html">Synced Folders</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/multi-machine/index.html">Multi-Machine</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/providers/index.html">Providers</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/virtualbox/index.html">VirtualBox</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/vmware/index.html">VMware</a>
+                  </li>
+                  <li class="current">
+                    <a href="./../../v2/plugins/index.html">Plugins</a>
+                  </li>
+                  <ul class="sub unstyled">
+                    <li>
+                      <a href="./../../v2/plugins/usage.html">Usage</a>
+                    </li>
+                    <li>
+                      <a href="./../../v2/plugins/development-basics.html">Plugin Development Basics</a>
+                    </li>
+                    <li>
+                      <a href="./../../v2/plugins/commands.html">Commands</a>
+                    </li>
+                    <li>
+                      <a href="./../../v2/plugins/configuration.html">Configuration</a>
+                    </li>
+                    <li>
+                      <a href="./../../v2/plugins/guests.html">Guests</a>
+                    </li>
+                    <li>
+                      <a href="./../../v2/plugins/guest-capabilities.html">Guest Capabilities</a>
+                    </li>
+                    <li class="current">
+                      <a href="./../../v2/plugins/hosts.html">Hosts</a>
+                    </li>
+                    <li>
+                      <a href="./../../v2/plugins/providers.html">Providers</a>
+                    </li>
+                    <li>
+                      <a href="./../../v2/plugins/provisioners.html">Provisioners</a>
+                    </li>
+                    <li>
+                      <a href="./../../v2/plugins/packaging.html">Packaging &amp; Distribution</a>
+                    </li>
+                  </ul>
+                  <li>
+                    <a href="./../../v2/debugging.html">Debugging</a>
+                  </li>
+                </ul>
+              </aside>
+            </div>
+            <div class="page-contents span9">
+              <div class="page-background"></div>
+              <div class="row">
+                <div class="span8 offset1">
+                  <h1>Plugin Development: Hosts</h1>
+                  <p>This page documents how to add new host OS implementations to Vagrant, allowing Vagrant to properly configure new host operating systems for features such as NFS shared folders. Prior to reading this, you should be familiar with the <a href="./../../v2/plugins/development-basics.html">plugin development basics</a>.</p>
+                  <div class="alert alert-warn">
+                    <p><strong>Warning: Advanced Topic!</strong> Developing plugins is an advanced topic that only experienced Vagrant users who are reasonably comfortable with Ruby should approach. </p>
+                  </div>
+                  <h2>Definition Component</h2>
+                  <p>Within the context of a plugin definition, new hosts can be defined like so:</p>
+                  <pre>
+                    <code class="ruby">host "some_os" do
+  require_relative "host"
   Host
 end
-</code></pre><p>Guests are defined with the <code>host</code> method. The first argument is th name of the host. This name isn&#39;t actually used anywhere, but may in the future, so choose something helpful. Then, the block argument returns a class that implements the <code>Vagrant.plugin(2, :host)</code> interface.</p><h2>Implementation</h2><p>Implementations of hosts subclass <code>Vagrant.plugin(2, :host)</code>. Within this implementation, various methods for different tasks must be implemented. Instead of going over each task, the easiest example would be to take a look at an existing host implementation.</p><p>There are <a href="https://github.com/mitchellh/vagrant/tree/master/plugins/hosts">many host implementations</a>, but you can view the <a href="https://github.com/mitchellh/vagrant/blob/master/plugins/hosts/bsd/host.rb">BSD host implementation</a> as a starting point.</p></div></div></div></div></div></div><footer><div class=container><div class=row><div class=span12><ul class="unstyled footer-nav"><li><a href="//docs.vagrantup.com/">Documentation</a></li><li><a href="//www.vagrantup.com/about">About</a></li><li><a href="//www.vagrantup.com/support">Support</a></li><a href="//downloads.vagrantup.com/"><li class="button inline-button">Download</li></a></ul><ul class="unstyled logos"><a href="//www.vagrantup.com"><li class=vagrant-logo-monochrome></li></a><li><span>by</span></li><a href="//www.hashicorp.com"><li class="hashi-logo-monochrome "></li></a></ul></div></div><div class=row><h6 class=legal> &#169; 2013 HashiCorp </h6></div></div></footer></div><script>
+</code>
+                  </pre>
+                  <p>Guests are defined with the <code>host</code> method. The first argument is th name of the host. This name isn't actually used anywhere, but may in the future, so choose something helpful. Then, the block argument returns a class that implements the <code>Vagrant.plugin(2, :host)</code> interface.</p>
+                  <h2>Implementation</h2>
+                  <p>Implementations of hosts subclass <code>Vagrant.plugin(2, :host)</code>. Within this implementation, various methods for different tasks must be implemented. Instead of going over each task, the easiest example would be to take a look at an existing host implementation.</p>
+                  <p>There are <a href="https://github.com/mitchellh/vagrant/tree/master/plugins/hosts">many host implementations</a>, but you can view the <a href="https://github.com/mitchellh/vagrant/blob/master/plugins/hosts/bsd/host.rb">BSD host implementation</a> as a starting point.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <footer>
+        <div class="container">
+          <div class="row">
+            <div class="span12">
+              <ul class="unstyled footer-nav">
+                <li>
+                  <a href="./../..//docs.vagrantup.com/">Documentation</a>
+                </li>
+                <li>
+                  <a href="./../..//www.vagrantup.com/about">About</a>
+                </li>
+                <li>
+                  <a href="./../..//www.vagrantup.com/support">Support</a>
+                </li>
+                <a href="./../..//downloads.vagrantup.com/">
+                  <li class="button inline-button">Download</li>
+                </a>
+              </ul>
+              <ul class="unstyled logos">
+                <a href="./../..//www.vagrantup.com">
+                  <li class="vagrant-logo-monochrome"></li>
+                </a>
+                <li>
+                  <span>by</span>
+                </li>
+                <a href="./../..//www.hashicorp.com">
+                  <li class="hashi-logo-monochrome "></li>
+                </a>
+              </ul>
+            </div>
+          </div>
+          <div class="row">
+            <h6 class="legal"> &#169; 2013 HashiCorp </h6>
+          </div>
+        </div>
+      </footer>
+    </div>
+    <script>
+<![CDATA[
 			$(".big-background").backstretch("assets/photos/full_width.jpg");
-		</script></body></html>
+		]]>
+    </script>
+  </body>
+</html>
