--- a/docsets/Vagrant.docset/Contents/Resources/Documents/v2/providers/configuration.html
+++ b/docsets/Vagrant.docset/Contents/Resources/Documents/v2/providers/configuration.html
@@ -1,17 +1,200 @@
-<!DOCTYPE html><html><head><title> Configuration - Providers - Vagrant Documentation</title><meta name=viewport content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"><link href="./../../stylesheets/bootstrap-2bdef9a2.css" media=screen rel=stylesheet /><link href="./../../stylesheets/vagrantup-d5d54c59.css" media=screen rel=stylesheet /><script src="./../../javascripts/jquery-08c11650.js"></script><script src="./../../javascripts/modernizr-84c0465a.js"></script><script src="./../../javascripts/bootstrap.min-98cc7a22.js"></script><script src="./../../javascripts/backstretch-3d1212ad.js"></script><script src="./../../javascripts/vagrantup-03aae2a8.js"></script><link href='//fonts.googleapis.com/css?family=Inconsolata' rel=stylesheet><script src="//use.typekit.net/xfs6zus.js"></script><script>try{Typekit.load();}catch(e){}</script></head><body><div class=wrapper><nav class=docs><a class=vagrant-docs-logo href="/">Vagrant Documentation</a><ul class="pull-right unstyled"><li><a href="//www.vagrantup.com/">Home</a></li></ul></nav><div class="page docs docs-home"><div class=container><div class=row><div class="sidebar span3"><aside class=sidebar-nav><div class="toggle hidden-desktop"><div class="open-close open"></div><a href="#">Contents</a></div><ul class=unstyled><li><a href="./../../v2/">Overview</a></li><li><a href="./../../v2/why-vagrant/index.html">Why Vagrant?</a></li><li><a href="./../../v2/installation/index.html">Installation</a></li><li><a href="./../../v2/getting-started/index.html">Getting Started</a></li><li><a href="./../../v2/cli/index.html">Command-Line Interface</a></li><li><a href="./../../v2/vagrantfile/index.html">Vagrantfile</a></li><li><a href="./../../v2/boxes.html">Boxes</a></li><li><a href="./../../v2/provisioning/index.html">Provisioning</a></li><li><a href="./../../v2/networking/index.html">Networking</a></li><li><a href="./../../v2/synced-folders/index.html">Synced Folders</a></li><li><a href="./../../v2/multi-machine/index.html">Multi-Machine</a></li><li class=current><a href="./../../v2/providers/index.html">Providers</a></li><ul class="sub unstyled"><li><a href="./../../v2/providers/installation.html">Installation</a></li><li><a href="./../../v2/providers/basic_usage.html">Basic Usage</a></li><li class=current><a href="./../../v2/providers/configuration.html">Configuration</a></li><li><a href="./../../v2/providers/default.html">Default Provider</a></li><li><a href="./../../v2/providers/custom.html">Custom Provider</a></li></ul><li><a href="./../../v2/virtualbox/index.html">VirtualBox</a></li><li><a href="./../../v2/vmware/index.html">VMware</a></li><li><a href="./../../v2/plugins/index.html">Plugins</a></li><li><a href="./../../v2/debugging.html">Debugging</a></li></ul></aside></div><div class="page-contents span9"><div class=page-background></div><div class=row><div class="span8 offset1"><h1>Configuration</h1><p>While well-behaved providers should work with any Vagrantfile with sane defaults, providers generally expose unique configuration options so that you can get the most out of each provider.</p><p>This provider-specific configuration is done within the Vagrantfile in a way that is portable, easy to use, and easy to understand.</p><h2>Portability</h2><p>An important fact is that even if you configure other providers within a Vagrantfile, the Vagrantfile remains portable even to individuals who don&#39;t necessarilly have that provider installed.</p><p>For example, if you configure VMware Fusion and send it to an individual who doesn&#39;t have the VMware Fusion provider, Vagrant will silently ignore that part of the configuration.</p><h2>Provider Configuration</h2><p>Configuring a specific provider looks like this:</p><pre><code>Vagrant.configure(&quot;2&quot;) do |config|
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml">
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=US-ASCII" />
+    <title> Configuration - Providers - Vagrant Documentation</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <link href="./../../stylesheets/bootstrap-2bdef9a2.css" media="screen" rel="stylesheet" />
+    <link href="./../../stylesheets/vagrantup-d5d54c59.css" media="screen" rel="stylesheet" />
+    <script src="./../../javascripts/jquery-08c11650.js"></script>
+    <script src="./../../javascripts/modernizr-84c0465a.js"></script>
+    <script src="./../../javascripts/bootstrap.min-98cc7a22.js"></script>
+    <script src="./../../javascripts/backstretch-3d1212ad.js"></script>
+    <script src="./../../javascripts/vagrantup-03aae2a8.js"></script>
+    <link href="./../..//fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet" />
+    <script src="./../..//use.typekit.net/xfs6zus.js"></script>
+    <script>
+<![CDATA[try{Typekit.load();}catch(e){}]]>
+    </script>
+  </head>
+  <body>
+    <div class="wrapper">
+      <nav class="docs">
+        <a class="vagrant-docs-logo" href="./../../">Vagrant Documentation</a>
+        <ul class="pull-right unstyled">
+          <li>
+            <a href="./../..//www.vagrantup.com/">Home</a>
+          </li>
+        </ul>
+      </nav>
+      <div class="page docs docs-home">
+        <div class="container">
+          <div class="row">
+            <div class="sidebar span3">
+              <aside class="sidebar-nav">
+                <div class="toggle hidden-desktop">
+                  <div class="open-close open"></div>
+                  <a href="#">Contents</a>
+                </div>
+                <ul class="unstyled">
+                  <li>
+                    <a href="./../../v2/">Overview</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/why-vagrant/index.html">Why Vagrant?</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/installation/index.html">Installation</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/getting-started/index.html">Getting Started</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/cli/index.html">Command-Line Interface</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/vagrantfile/index.html">Vagrantfile</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/boxes.html">Boxes</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/provisioning/index.html">Provisioning</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/networking/index.html">Networking</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/synced-folders/index.html">Synced Folders</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/multi-machine/index.html">Multi-Machine</a>
+                  </li>
+                  <li class="current">
+                    <a href="./../../v2/providers/index.html">Providers</a>
+                  </li>
+                  <ul class="sub unstyled">
+                    <li>
+                      <a href="./../../v2/providers/installation.html">Installation</a>
+                    </li>
+                    <li>
+                      <a href="./../../v2/providers/basic_usage.html">Basic Usage</a>
+                    </li>
+                    <li class="current">
+                      <a href="./../../v2/providers/configuration.html">Configuration</a>
+                    </li>
+                    <li>
+                      <a href="./../../v2/providers/default.html">Default Provider</a>
+                    </li>
+                    <li>
+                      <a href="./../../v2/providers/custom.html">Custom Provider</a>
+                    </li>
+                  </ul>
+                  <li>
+                    <a href="./../../v2/virtualbox/index.html">VirtualBox</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/vmware/index.html">VMware</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/plugins/index.html">Plugins</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/debugging.html">Debugging</a>
+                  </li>
+                </ul>
+              </aside>
+            </div>
+            <div class="page-contents span9">
+              <div class="page-background"></div>
+              <div class="row">
+                <div class="span8 offset1">
+                  <h1>Configuration</h1>
+                  <p>While well-behaved providers should work with any Vagrantfile with sane defaults, providers generally expose unique configuration options so that you can get the most out of each provider.</p>
+                  <p>This provider-specific configuration is done within the Vagrantfile in a way that is portable, easy to use, and easy to understand.</p>
+                  <h2>Portability</h2>
+                  <p>An important fact is that even if you configure other providers within a Vagrantfile, the Vagrantfile remains portable even to individuals who don't necessarilly have that provider installed.</p>
+                  <p>For example, if you configure VMware Fusion and send it to an individual who doesn't have the VMware Fusion provider, Vagrant will silently ignore that part of the configuration.</p>
+                  <h2>Provider Configuration</h2>
+                  <p>Configuring a specific provider looks like this:</p>
+                  <pre>
+                    <code>Vagrant.configure("2") do |config|
   # ... (other config)
 
-  config.vm.provider &quot;virtualbox&quot; do |vb|
-    vb.customize [&quot;modifyvm&quot;, :id, &quot;--cpuexecutioncap&quot;, &quot;50&quot;]
+  config.vm.provider "virtualbox" do |vb|
+    vb.customize ["modifyvm", :id, "--cpuexecutioncap", "50"]
   end
 end
-</code></pre><p>Multiple <code>config.vm.provider</code> blocks can exist to configure multiple providers.</p><p>The configuration format should look very similar to how provisioners are configured. The <code>config.vm.provider</code> takes a single parameter: the name of the provider being configured. Then, an inner block with custom configuration options is exposed that can be used to configure that provider.</p><p>This inner configuration differs among providers, so please read the documentation for your provider of choice to see available configuration options.</p><p>Remember, some providers don&#39;t require any provider-specific configuration and work directly out of the box. Provider-specific configuration is meant as a way to expose more options to get the most of the provider of your choice. It is not meant as a roadblock to running against a specific provider.</p><h2>Overriding Configuration</h2><p>Providers can also override non-provider specific configuration, such as <code>config.vm.box</code> and any other Vagrant configuration. This is done by specifying a second argument to <code>config.vm.provider</code>. This argument is just like the normal <code>config</code>, so set any settings you want, and they will be overriden only for that provider.</p><p>Example:</p><pre><code>Vagrant.configure(&quot;2&quot;) do |config|
-  config.vm.box = &quot;precise64&quot;
+</code>
+                  </pre>
+                  <p>Multiple <code>config.vm.provider</code> blocks can exist to configure multiple providers.</p>
+                  <p>The configuration format should look very similar to how provisioners are configured. The <code>config.vm.provider</code> takes a single parameter: the name of the provider being configured. Then, an inner block with custom configuration options is exposed that can be used to configure that provider.</p>
+                  <p>This inner configuration differs among providers, so please read the documentation for your provider of choice to see available configuration options.</p>
+                  <p>Remember, some providers don't require any provider-specific configuration and work directly out of the box. Provider-specific configuration is meant as a way to expose more options to get the most of the provider of your choice. It is not meant as a roadblock to running against a specific provider.</p>
+                  <h2>Overriding Configuration</h2>
+                  <p>Providers can also override non-provider specific configuration, such as <code>config.vm.box</code> and any other Vagrant configuration. This is done by specifying a second argument to <code>config.vm.provider</code>. This argument is just like the normal <code>config</code>, so set any settings you want, and they will be overriden only for that provider.</p>
+                  <p>Example:</p>
+                  <pre>
+                    <code>Vagrant.configure("2") do |config|
+  config.vm.box = "precise64"
 
-  config.vm.provider &quot;vmware_fusion&quot; do |v, override|
-    override.vm.box = &quot;precise64_fusion&quot;
+  config.vm.provider "vmware_fusion" do |v, override|
+    override.vm.box = "precise64_fusion"
   end
 end
-</code></pre><p>In the above case, Vagrant will use the &quot;precise64&quot; box by default, but will use &quot;precise64_fusion&quot; if the VMware Fusion provider is used.</p><div class="alert alert-info"><p><strong>The Vagrant Way:</strong> The proper "Vagrant way" is to avoid any provider-specific overrides if possible by making boxes for multiple providers that are as identical as possible, since box names can map to multiple providers. However, this isn't always possible, and in those cases, overrides are available. </p></div></div></div></div></div></div></div><footer><div class=container><div class=row><div class=span12><ul class="unstyled footer-nav"><li><a href="//docs.vagrantup.com/">Documentation</a></li><li><a href="//www.vagrantup.com/about">About</a></li><li><a href="//www.vagrantup.com/support">Support</a></li><a href="//downloads.vagrantup.com/"><li class="button inline-button">Download</li></a></ul><ul class="unstyled logos"><a href="//www.vagrantup.com"><li class=vagrant-logo-monochrome></li></a><li><span>by</span></li><a href="//www.hashicorp.com"><li class="hashi-logo-monochrome "></li></a></ul></div></div><div class=row><h6 class=legal> &#169; 2013 HashiCorp </h6></div></div></footer></div><script>
+</code>
+                  </pre>
+                  <p>In the above case, Vagrant will use the "precise64" box by default, but will use "precise64_fusion" if the VMware Fusion provider is used.</p>
+                  <div class="alert alert-info">
+                    <p><strong>The Vagrant Way:</strong> The proper "Vagrant way" is to avoid any provider-specific overrides if possible by making boxes for multiple providers that are as identical as possible, since box names can map to multiple providers. However, this isn't always possible, and in those cases, overrides are available. </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <footer>
+        <div class="container">
+          <div class="row">
+            <div class="span12">
+              <ul class="unstyled footer-nav">
+                <li>
+                  <a href="./../..//docs.vagrantup.com/">Documentation</a>
+                </li>
+                <li>
+                  <a href="./../..//www.vagrantup.com/about">About</a>
+                </li>
+                <li>
+                  <a href="./../..//www.vagrantup.com/support">Support</a>
+                </li>
+                <a href="./../..//downloads.vagrantup.com/">
+                  <li class="button inline-button">Download</li>
+                </a>
+              </ul>
+              <ul class="unstyled logos">
+                <a href="./../..//www.vagrantup.com">
+                  <li class="vagrant-logo-monochrome"></li>
+                </a>
+                <li>
+                  <span>by</span>
+                </li>
+                <a href="./../..//www.hashicorp.com">
+                  <li class="hashi-logo-monochrome "></li>
+                </a>
+              </ul>
+            </div>
+          </div>
+          <div class="row">
+            <h6 class="legal"> &#169; 2013 HashiCorp </h6>
+          </div>
+        </div>
+      </footer>
+    </div>
+    <script>
+<![CDATA[
 			$(".big-background").backstretch("assets/photos/full_width.jpg");
-		</script></body></html>
+		]]>
+    </script>
+  </body>
+</html>
