--- a/docsets/Vagrant.docset/Contents/Resources/Documents/v2/provisioning/basic_usage.html
+++ b/docsets/Vagrant.docset/Contents/Resources/Documents/v2/provisioning/basic_usage.html
@@ -1,15 +1,197 @@
-<!DOCTYPE html><html><head><title> Basic Usage - Provisioning - Vagrant Documentation</title><meta name=viewport content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"><link href="./../../stylesheets/bootstrap-2bdef9a2.css" media=screen rel=stylesheet /><link href="./../../stylesheets/vagrantup-d5d54c59.css" media=screen rel=stylesheet /><script src="./../../javascripts/jquery-08c11650.js"></script><script src="./../../javascripts/modernizr-84c0465a.js"></script><script src="./../../javascripts/bootstrap.min-98cc7a22.js"></script><script src="./../../javascripts/backstretch-3d1212ad.js"></script><script src="./../../javascripts/vagrantup-03aae2a8.js"></script><link href='//fonts.googleapis.com/css?family=Inconsolata' rel=stylesheet><script src="//use.typekit.net/xfs6zus.js"></script><script>try{Typekit.load();}catch(e){}</script></head><body><div class=wrapper><nav class=docs><a class=vagrant-docs-logo href="/">Vagrant Documentation</a><ul class="pull-right unstyled"><li><a href="//www.vagrantup.com/">Home</a></li></ul></nav><div class="page docs docs-home"><div class=container><div class=row><div class="sidebar span3"><aside class=sidebar-nav><div class="toggle hidden-desktop"><div class="open-close open"></div><a href="#">Contents</a></div><ul class=unstyled><li><a href="./../../v2/">Overview</a></li><li><a href="./../../v2/why-vagrant/index.html">Why Vagrant?</a></li><li><a href="./../../v2/installation/index.html">Installation</a></li><li><a href="./../../v2/getting-started/index.html">Getting Started</a></li><li><a href="./../../v2/cli/index.html">Command-Line Interface</a></li><li><a href="./../../v2/vagrantfile/index.html">Vagrantfile</a></li><li><a href="./../../v2/boxes.html">Boxes</a></li><li class=current><a href="./../../v2/provisioning/index.html">Provisioning</a></li><ul class="sub unstyled"><li class=current><a href="./../../v2/provisioning/basic_usage.html">Basic Usage</a></li><li><a href="./../../v2/provisioning/shell.html">Shell</a></li><li><a href="./../../v2/provisioning/ansible.html">Ansible</a></li><li><a href="./../../v2/provisioning/chef_solo.html">Chef Solo</a></li><li><a href="./../../v2/provisioning/chef_client.html">Chef Client</a></li><li><a href="./../../v2/provisioning/puppet_apply.html">Puppet Apply</a></li><li><a href="./../../v2/provisioning/puppet_agent.html">Puppet Agent</a></li></ul><li><a href="./../../v2/networking/index.html">Networking</a></li><li><a href="./../../v2/synced-folders/index.html">Synced Folders</a></li><li><a href="./../../v2/multi-machine/index.html">Multi-Machine</a></li><li><a href="./../../v2/providers/index.html">Providers</a></li><li><a href="./../../v2/virtualbox/index.html">VirtualBox</a></li><li><a href="./../../v2/vmware/index.html">VMware</a></li><li><a href="./../../v2/plugins/index.html">Plugins</a></li><li><a href="./../../v2/debugging.html">Debugging</a></li></ul></aside></div><div class="page-contents span9"><div class=page-background></div><div class=row><div class="span8 offset1"><h1>Basic Usage of Provisioners</h1><p>While Vagrant offers multiple options for how you are able to provision your machine, there is a standard usage pattern as well as some important points common to all provisioners that are important to know.</p><h2>Configuration</h2><p>First, every provisioner is configured within your <a href="./../../v2/vagrantfile/">Vagrantfile</a> using the <code>config.vm.provision</code> method call. For example, the Vagrantfile below enables shell provisioning:</p><pre><code class="ruby">Vagrant.configure(&quot;2&quot;) do |config|
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml">
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=US-ASCII" />
+    <title> Basic Usage - Provisioning - Vagrant Documentation</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <link href="./../../stylesheets/bootstrap-2bdef9a2.css" media="screen" rel="stylesheet" />
+    <link href="./../../stylesheets/vagrantup-d5d54c59.css" media="screen" rel="stylesheet" />
+    <script src="./../../javascripts/jquery-08c11650.js"></script>
+    <script src="./../../javascripts/modernizr-84c0465a.js"></script>
+    <script src="./../../javascripts/bootstrap.min-98cc7a22.js"></script>
+    <script src="./../../javascripts/backstretch-3d1212ad.js"></script>
+    <script src="./../../javascripts/vagrantup-03aae2a8.js"></script>
+    <link href="./../..//fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet" />
+    <script src="./../..//use.typekit.net/xfs6zus.js"></script>
+    <script>
+<![CDATA[try{Typekit.load();}catch(e){}]]>
+    </script>
+  </head>
+  <body>
+    <div class="wrapper">
+      <nav class="docs">
+        <a class="vagrant-docs-logo" href="./../../">Vagrant Documentation</a>
+        <ul class="pull-right unstyled">
+          <li>
+            <a href="./../..//www.vagrantup.com/">Home</a>
+          </li>
+        </ul>
+      </nav>
+      <div class="page docs docs-home">
+        <div class="container">
+          <div class="row">
+            <div class="sidebar span3">
+              <aside class="sidebar-nav">
+                <div class="toggle hidden-desktop">
+                  <div class="open-close open"></div>
+                  <a href="#">Contents</a>
+                </div>
+                <ul class="unstyled">
+                  <li>
+                    <a href="./../../v2/">Overview</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/why-vagrant/index.html">Why Vagrant?</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/installation/index.html">Installation</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/getting-started/index.html">Getting Started</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/cli/index.html">Command-Line Interface</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/vagrantfile/index.html">Vagrantfile</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/boxes.html">Boxes</a>
+                  </li>
+                  <li class="current">
+                    <a href="./../../v2/provisioning/index.html">Provisioning</a>
+                  </li>
+                  <ul class="sub unstyled">
+                    <li class="current">
+                      <a href="./../../v2/provisioning/basic_usage.html">Basic Usage</a>
+                    </li>
+                    <li>
+                      <a href="./../../v2/provisioning/shell.html">Shell</a>
+                    </li>
+                    <li>
+                      <a href="./../../v2/provisioning/ansible.html">Ansible</a>
+                    </li>
+                    <li>
+                      <a href="./../../v2/provisioning/chef_solo.html">Chef Solo</a>
+                    </li>
+                    <li>
+                      <a href="./../../v2/provisioning/chef_client.html">Chef Client</a>
+                    </li>
+                    <li>
+                      <a href="./../../v2/provisioning/puppet_apply.html">Puppet Apply</a>
+                    </li>
+                    <li>
+                      <a href="./../../v2/provisioning/puppet_agent.html">Puppet Agent</a>
+                    </li>
+                  </ul>
+                  <li>
+                    <a href="./../../v2/networking/index.html">Networking</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/synced-folders/index.html">Synced Folders</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/multi-machine/index.html">Multi-Machine</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/providers/index.html">Providers</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/virtualbox/index.html">VirtualBox</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/vmware/index.html">VMware</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/plugins/index.html">Plugins</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/debugging.html">Debugging</a>
+                  </li>
+                </ul>
+              </aside>
+            </div>
+            <div class="page-contents span9">
+              <div class="page-background"></div>
+              <div class="row">
+                <div class="span8 offset1">
+                  <h1>Basic Usage of Provisioners</h1>
+                  <p>While Vagrant offers multiple options for how you are able to provision your machine, there is a standard usage pattern as well as some important points common to all provisioners that are important to know.</p>
+                  <h2>Configuration</h2>
+                  <p>First, every provisioner is configured within your <a href="./../../v2/vagrantfile/">Vagrantfile</a> using the <code>config.vm.provision</code> method call. For example, the Vagrantfile below enables shell provisioning:</p>
+                  <pre>
+                    <code class="ruby">Vagrant.configure("2") do |config|
   # ... other configuration
 
-  config.vm.provision &quot;shell&quot;, inline: &quot;echo hello&quot;
+  config.vm.provision "shell", inline: "echo hello"
 end
-</code></pre><p>Every provisioner has an identifier, such as `&quot;shell&quot;, used as the first parameter to the provisioning configuration. Following that is basic key/value for configuring that specific provisioner. Instead of basic key/value, you can also use a Ruby block for a syntax that is more like variable assignment. The following is effectively the same as the prior example:</p><pre><code class="ruby">Vagrant.configure(&quot;2&quot;) do |config|
+</code>
+                  </pre>
+                  <p>Every provisioner has an identifier, such as `"shell", used as the first parameter to the provisioning configuration. Following that is basic key/value for configuring that specific provisioner. Instead of basic key/value, you can also use a Ruby block for a syntax that is more like variable assignment. The following is effectively the same as the prior example:</p>
+                  <pre>
+                    <code class="ruby">Vagrant.configure("2") do |config|
   # ... other configuration
 
-  config.vm.provision &quot;shell&quot; do |s|
-    s.inline = &quot;echo hello&quot;
+  config.vm.provision "shell" do |s|
+    s.inline = "echo hello"
   end
 end
-</code></pre><p>The benefit of the block-based syntax is that with more than a couple options it can greatly improve readability. Additionally, some provisioners, like the Chef provisioner, have special methods that can be called within that block to ease configuration that can&#39;t be done with the key/value approach.</p><h2>Multiple Provisioners</h2><p>Multiple <code>config.vm.provision</code> methods can be used to define multiple provisioners. These provisioners will be run in the order they&#39;re defined. This is useful for a variety of reasons, but most commonly it is used so that a shell script can bootstrap some of the system so that another provisioner can take over later.</p><h2>Running Provisioners</h2><p>Provisioners are run in three cases: <code>vagrant up</code>, <code>vagrant reload</code>, and <code>vagrant provision</code>.</p><p>A <code>--no-provision</code> flag can be passed to <code>up</code> and <code>reload</code> if you don&#39;t want to run provisioners. Likewise, you can pass <code>--provision</code> to force provisioning.</p><p>The <code>--provision-with</code> flag can be used if you only want to run a specific provisioner if you have multiple provisioners specified. For example, if you have a shell and Puppet provisioner and only want to run the shell one, you can do <code>vagrant provision --provision-with shell</code>.</p></div></div></div></div></div></div><footer><div class=container><div class=row><div class=span12><ul class="unstyled footer-nav"><li><a href="//docs.vagrantup.com/">Documentation</a></li><li><a href="//www.vagrantup.com/about">About</a></li><li><a href="//www.vagrantup.com/support">Support</a></li><a href="//downloads.vagrantup.com/"><li class="button inline-button">Download</li></a></ul><ul class="unstyled logos"><a href="//www.vagrantup.com"><li class=vagrant-logo-monochrome></li></a><li><span>by</span></li><a href="//www.hashicorp.com"><li class="hashi-logo-monochrome "></li></a></ul></div></div><div class=row><h6 class=legal> &#169; 2013 HashiCorp </h6></div></div></footer></div><script>
+</code>
+                  </pre>
+                  <p>The benefit of the block-based syntax is that with more than a couple options it can greatly improve readability. Additionally, some provisioners, like the Chef provisioner, have special methods that can be called within that block to ease configuration that can't be done with the key/value approach.</p>
+                  <h2>Multiple Provisioners</h2>
+                  <p>Multiple <code>config.vm.provision</code> methods can be used to define multiple provisioners. These provisioners will be run in the order they're defined. This is useful for a variety of reasons, but most commonly it is used so that a shell script can bootstrap some of the system so that another provisioner can take over later.</p>
+                  <h2>Running Provisioners</h2>
+                  <p>Provisioners are run in three cases: <code>vagrant up</code>, <code>vagrant reload</code>, and <code>vagrant provision</code>.</p>
+                  <p>A <code>--no-provision</code> flag can be passed to <code>up</code> and <code>reload</code> if you don't want to run provisioners. Likewise, you can pass <code>--provision</code> to force provisioning.</p>
+                  <p>The <code>--provision-with</code> flag can be used if you only want to run a specific provisioner if you have multiple provisioners specified. For example, if you have a shell and Puppet provisioner and only want to run the shell one, you can do <code>vagrant provision --provision-with shell</code>.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <footer>
+        <div class="container">
+          <div class="row">
+            <div class="span12">
+              <ul class="unstyled footer-nav">
+                <li>
+                  <a href="./../..//docs.vagrantup.com/">Documentation</a>
+                </li>
+                <li>
+                  <a href="./../..//www.vagrantup.com/about">About</a>
+                </li>
+                <li>
+                  <a href="./../..//www.vagrantup.com/support">Support</a>
+                </li>
+                <a href="./../..//downloads.vagrantup.com/">
+                  <li class="button inline-button">Download</li>
+                </a>
+              </ul>
+              <ul class="unstyled logos">
+                <a href="./../..//www.vagrantup.com">
+                  <li class="vagrant-logo-monochrome"></li>
+                </a>
+                <li>
+                  <span>by</span>
+                </li>
+                <a href="./../..//www.hashicorp.com">
+                  <li class="hashi-logo-monochrome "></li>
+                </a>
+              </ul>
+            </div>
+          </div>
+          <div class="row">
+            <h6 class="legal"> &#169; 2013 HashiCorp </h6>
+          </div>
+        </div>
+      </footer>
+    </div>
+    <script>
+<![CDATA[
 			$(".big-background").backstretch("assets/photos/full_width.jpg");
-		</script></body></html>
+		]]>
+    </script>
+  </body>
+</html>
