--- a/docsets/Vagrant.docset/Contents/Resources/Documents/v2/provisioning/chef_client.html
+++ b/docsets/Vagrant.docset/Contents/Resources/Documents/v2/provisioning/chef_client.html
@@ -1,28 +1,240 @@
-<!DOCTYPE html><html><head><title> Chef Client - Provisioning - Vagrant Documentation</title><meta name=viewport content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"><link href="./../../stylesheets/bootstrap-2bdef9a2.css" media=screen rel=stylesheet /><link href="./../../stylesheets/vagrantup-d5d54c59.css" media=screen rel=stylesheet /><script src="./../../javascripts/jquery-08c11650.js"></script><script src="./../../javascripts/modernizr-84c0465a.js"></script><script src="./../../javascripts/bootstrap.min-98cc7a22.js"></script><script src="./../../javascripts/backstretch-3d1212ad.js"></script><script src="./../../javascripts/vagrantup-03aae2a8.js"></script><link href='//fonts.googleapis.com/css?family=Inconsolata' rel=stylesheet><script src="//use.typekit.net/xfs6zus.js"></script><script>try{Typekit.load();}catch(e){}</script></head><body><div class=wrapper><nav class=docs><a class=vagrant-docs-logo href="/">Vagrant Documentation</a><ul class="pull-right unstyled"><li><a href="//www.vagrantup.com/">Home</a></li></ul></nav><div class="page docs docs-home"><div class=container><div class=row><div class="sidebar span3"><aside class=sidebar-nav><div class="toggle hidden-desktop"><div class="open-close open"></div><a href="#">Contents</a></div><ul class=unstyled><li><a href="./../../v2/">Overview</a></li><li><a href="./../../v2/why-vagrant/index.html">Why Vagrant?</a></li><li><a href="./../../v2/installation/index.html">Installation</a></li><li><a href="./../../v2/getting-started/index.html">Getting Started</a></li><li><a href="./../../v2/cli/index.html">Command-Line Interface</a></li><li><a href="./../../v2/vagrantfile/index.html">Vagrantfile</a></li><li><a href="./../../v2/boxes.html">Boxes</a></li><li class=current><a href="./../../v2/provisioning/index.html">Provisioning</a></li><ul class="sub unstyled"><li><a href="./../../v2/provisioning/basic_usage.html">Basic Usage</a></li><li><a href="./../../v2/provisioning/shell.html">Shell</a></li><li><a href="./../../v2/provisioning/ansible.html">Ansible</a></li><li><a href="./../../v2/provisioning/chef_solo.html">Chef Solo</a></li><li class=current><a href="./../../v2/provisioning/chef_client.html">Chef Client</a></li><li><a href="./../../v2/provisioning/puppet_apply.html">Puppet Apply</a></li><li><a href="./../../v2/provisioning/puppet_agent.html">Puppet Agent</a></li></ul><li><a href="./../../v2/networking/index.html">Networking</a></li><li><a href="./../../v2/synced-folders/index.html">Synced Folders</a></li><li><a href="./../../v2/multi-machine/index.html">Multi-Machine</a></li><li><a href="./../../v2/providers/index.html">Providers</a></li><li><a href="./../../v2/virtualbox/index.html">VirtualBox</a></li><li><a href="./../../v2/vmware/index.html">VMware</a></li><li><a href="./../../v2/plugins/index.html">Plugins</a></li><li><a href="./../../v2/debugging.html">Debugging</a></li></ul></aside></div><div class="page-contents span9"><div class=page-background></div><div class=row><div class="span8 offset1"><h1>Chef Client Provisioner</h1><p><strong>Provisioner name: <code>chef_client</code></strong></p><p>The chef client provisioner allows you to provision the guest using <a href="//www.opscode.com/chef/">Chef</a>, specifically by connecting to an existing Chef Server and registering the Vagrant machine as a node within your infrastructure.</p><p>If you&#39;re just learning Chef for the first time, you probably want to start with the <a href="./../../v2/provisioning/chef_solo.html">Chef Solo</a> provisioner.</p><div class="alert alert-warn"><p><strong>Warning:</strong> If you're not familiar with Chef and Vagrant already, I recommend starting with the <a href="./../../v2/provisioning/shell.html">shell provisioner</a>. </p></div><h2>Authenticating</h2><p>The minimum required to use provision using Chef client is to provide a URL to the Chef sever as well as the path to the validation key so that the node can register with the Chef server:</p><pre><code class="ruby">Vagrant.configure(&quot;2&quot;) do |config|
-  config.vm.provision &quot;chef_client&quot; do |chef|
-    chef.chef_server_url = &quot;http://mychefserver.com:4000/&quot;
-    chef.validation_key_path = &quot;validation.pem&quot;
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml">
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=US-ASCII" />
+    <title> Chef Client - Provisioning - Vagrant Documentation</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <link href="./../../stylesheets/bootstrap-2bdef9a2.css" media="screen" rel="stylesheet" />
+    <link href="./../../stylesheets/vagrantup-d5d54c59.css" media="screen" rel="stylesheet" />
+    <script src="./../../javascripts/jquery-08c11650.js"></script>
+    <script src="./../../javascripts/modernizr-84c0465a.js"></script>
+    <script src="./../../javascripts/bootstrap.min-98cc7a22.js"></script>
+    <script src="./../../javascripts/backstretch-3d1212ad.js"></script>
+    <script src="./../../javascripts/vagrantup-03aae2a8.js"></script>
+    <link href="./../..//fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet" />
+    <script src="./../..//use.typekit.net/xfs6zus.js"></script>
+    <script>
+<![CDATA[try{Typekit.load();}catch(e){}]]>
+    </script>
+  </head>
+  <body>
+    <div class="wrapper">
+      <nav class="docs">
+        <a class="vagrant-docs-logo" href="./../../">Vagrant Documentation</a>
+        <ul class="pull-right unstyled">
+          <li>
+            <a href="./../..//www.vagrantup.com/">Home</a>
+          </li>
+        </ul>
+      </nav>
+      <div class="page docs docs-home">
+        <div class="container">
+          <div class="row">
+            <div class="sidebar span3">
+              <aside class="sidebar-nav">
+                <div class="toggle hidden-desktop">
+                  <div class="open-close open"></div>
+                  <a href="#">Contents</a>
+                </div>
+                <ul class="unstyled">
+                  <li>
+                    <a href="./../../v2/">Overview</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/why-vagrant/index.html">Why Vagrant?</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/installation/index.html">Installation</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/getting-started/index.html">Getting Started</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/cli/index.html">Command-Line Interface</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/vagrantfile/index.html">Vagrantfile</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/boxes.html">Boxes</a>
+                  </li>
+                  <li class="current">
+                    <a href="./../../v2/provisioning/index.html">Provisioning</a>
+                  </li>
+                  <ul class="sub unstyled">
+                    <li>
+                      <a href="./../../v2/provisioning/basic_usage.html">Basic Usage</a>
+                    </li>
+                    <li>
+                      <a href="./../../v2/provisioning/shell.html">Shell</a>
+                    </li>
+                    <li>
+                      <a href="./../../v2/provisioning/ansible.html">Ansible</a>
+                    </li>
+                    <li>
+                      <a href="./../../v2/provisioning/chef_solo.html">Chef Solo</a>
+                    </li>
+                    <li class="current">
+                      <a href="./../../v2/provisioning/chef_client.html">Chef Client</a>
+                    </li>
+                    <li>
+                      <a href="./../../v2/provisioning/puppet_apply.html">Puppet Apply</a>
+                    </li>
+                    <li>
+                      <a href="./../../v2/provisioning/puppet_agent.html">Puppet Agent</a>
+                    </li>
+                  </ul>
+                  <li>
+                    <a href="./../../v2/networking/index.html">Networking</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/synced-folders/index.html">Synced Folders</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/multi-machine/index.html">Multi-Machine</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/providers/index.html">Providers</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/virtualbox/index.html">VirtualBox</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/vmware/index.html">VMware</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/plugins/index.html">Plugins</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/debugging.html">Debugging</a>
+                  </li>
+                </ul>
+              </aside>
+            </div>
+            <div class="page-contents span9">
+              <div class="page-background"></div>
+              <div class="row">
+                <div class="span8 offset1">
+                  <h1>Chef Client Provisioner</h1>
+                  <p>
+                    <strong>Provisioner name: <code>chef_client</code></strong>
+                  </p>
+                  <p>The chef client provisioner allows you to provision the guest using <a href="./../..//www.opscode.com/chef/">Chef</a>, specifically by connecting to an existing Chef Server and registering the Vagrant machine as a node within your infrastructure.</p>
+                  <p>If you're just learning Chef for the first time, you probably want to start with the <a href="./../../v2/provisioning/chef_solo.html">Chef Solo</a> provisioner.</p>
+                  <div class="alert alert-warn">
+                    <p><strong>Warning:</strong> If you're not familiar with Chef and Vagrant already, I recommend starting with the <a href="./../../v2/provisioning/shell.html">shell provisioner</a>. </p>
+                  </div>
+                  <h2>Authenticating</h2>
+                  <p>The minimum required to use provision using Chef client is to provide a URL to the Chef sever as well as the path to the validation key so that the node can register with the Chef server:</p>
+                  <pre>
+                    <code class="ruby">Vagrant.configure("2") do |config|
+  config.vm.provision "chef_client" do |chef|
+    chef.chef_server_url = "http://mychefserver.com:4000/"
+    chef.validation_key_path = "validation.pem"
   end
 end
-</code></pre><p>The node will register with the Chef server specified, download the proper run list for that node, and provision.</p><h2>Specifying a Run List</h2><p>Normally, the Chef server is responsible for specifying the run list for the node. However, you can override what the Chef server sends down by manually specifying a run list:</p><pre><code class="ruby">Vagrant.configure(&quot;2&quot;) do |config|
-  config.vm.provision &quot;chef_client&quot; do |chef|
+</code>
+                  </pre>
+                  <p>The node will register with the Chef server specified, download the proper run list for that node, and provision.</p>
+                  <h2>Specifying a Run List</h2>
+                  <p>Normally, the Chef server is responsible for specifying the run list for the node. However, you can override what the Chef server sends down by manually specifying a run list:</p>
+                  <pre>
+                    <code class="ruby">Vagrant.configure("2") do |config|
+  config.vm.provision "chef_client" do |chef|
     # Add a recipe
-    chef.add_recipe &quot;apache&quot;
+    chef.add_recipe "apache"
 
     # Or maybe a role
-    chef.add_role &quot;web&quot;
+    chef.add_role "web"
   end
 end
-</code></pre><p>Remember, this will <em>override</em> the run list specified on the Chef server itself.</p><h2>Environments</h2><p>You can specify the <a href="//wiki.opscode.com/display/chef/Environments">environment</a> for the node to come up in using the <code>environment</code> configuration option:</p><pre><code class="ruby">Vagrant.configure(&quot;2&quot;) do |config|
-  config.vm.provision &quot;chef_client&quot; do |chef|
+</code>
+                  </pre>
+                  <p>Remember, this will <em>override</em> the run list specified on the Chef server itself.</p>
+                  <h2>Environments</h2>
+                  <p>You can specify the <a href="./../..//wiki.opscode.com/display/chef/Environments">environment</a> for the node to come up in using the <code>environment</code> configuration option:</p>
+                  <pre>
+                    <code class="ruby">Vagrant.configure("2") do |config|
+  config.vm.provision "chef_client" do |chef|
     # ...
 
-    chef.environment = &quot;development&quot;
+    chef.environment = "development"
   end
 end
-</code></pre><h2>Other Configuration Options</h2><p>There are a few more configuration options available. These generally don&#39;t need to be modified but are available if your Chef server requires customization of these variables:</p><ul><li><code>client_key_path</code></li><li><code>node_name</code></li><li><code>validation_client_name</code></li></ul><h2>Cleanup</h2><p>When you provision your Vagrant virtual machine with Chef server, it creates a new Chef &quot;node&quot; entry and Chef &quot;client&quot; entry on the Chef server, using the hostname of the machine. After you tear down your guest machine, you must explicitly delete these entries from the Chef server before you provision a new one with Chef server. For example, using Chef&#39;s built-in <code>knife</code> tool:</p><pre><code>$ knife node delete precise64
+</code>
+                  </pre>
+                  <h2>Other Configuration Options</h2>
+                  <p>There are a few more configuration options available. These generally don't need to be modified but are available if your Chef server requires customization of these variables:</p>
+                  <ul>
+                    <li>
+                      <code>client_key_path</code>
+                    </li>
+                    <li>
+                      <code>node_name</code>
+                    </li>
+                    <li>
+                      <code>validation_client_name</code>
+                    </li>
+                  </ul>
+                  <h2>Cleanup</h2>
+                  <p>When you provision your Vagrant virtual machine with Chef server, it creates a new Chef "node" entry and Chef "client" entry on the Chef server, using the hostname of the machine. After you tear down your guest machine, you must explicitly delete these entries from the Chef server before you provision a new one with Chef server. For example, using Chef's built-in <code>knife</code> tool:</p>
+                  <pre>
+                    <code>$ knife node delete precise64
 $ knife client delete precise64
-</code></pre><p>If you fail to do so, you&#39;ll get the following error when Vagrant tries to provision the machine with Chef client:</p><pre><code>HTTP Request Returned 409 Conflict: Client already exists.
-</code></pre></div></div></div></div></div></div><footer><div class=container><div class=row><div class=span12><ul class="unstyled footer-nav"><li><a href="//docs.vagrantup.com/">Documentation</a></li><li><a href="//www.vagrantup.com/about">About</a></li><li><a href="//www.vagrantup.com/support">Support</a></li><a href="//downloads.vagrantup.com/"><li class="button inline-button">Download</li></a></ul><ul class="unstyled logos"><a href="//www.vagrantup.com"><li class=vagrant-logo-monochrome></li></a><li><span>by</span></li><a href="//www.hashicorp.com"><li class="hashi-logo-monochrome "></li></a></ul></div></div><div class=row><h6 class=legal> &#169; 2013 HashiCorp </h6></div></div></footer></div><script>
+</code>
+                  </pre>
+                  <p>If you fail to do so, you'll get the following error when Vagrant tries to provision the machine with Chef client:</p>
+                  <pre>
+                    <code>HTTP Request Returned 409 Conflict: Client already exists.
+</code>
+                  </pre>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <footer>
+        <div class="container">
+          <div class="row">
+            <div class="span12">
+              <ul class="unstyled footer-nav">
+                <li>
+                  <a href="./../..//docs.vagrantup.com/">Documentation</a>
+                </li>
+                <li>
+                  <a href="./../..//www.vagrantup.com/about">About</a>
+                </li>
+                <li>
+                  <a href="./../..//www.vagrantup.com/support">Support</a>
+                </li>
+                <a href="./../..//downloads.vagrantup.com/">
+                  <li class="button inline-button">Download</li>
+                </a>
+              </ul>
+              <ul class="unstyled logos">
+                <a href="./../..//www.vagrantup.com">
+                  <li class="vagrant-logo-monochrome"></li>
+                </a>
+                <li>
+                  <span>by</span>
+                </li>
+                <a href="./../..//www.hashicorp.com">
+                  <li class="hashi-logo-monochrome "></li>
+                </a>
+              </ul>
+            </div>
+          </div>
+          <div class="row">
+            <h6 class="legal"> &#169; 2013 HashiCorp </h6>
+          </div>
+        </div>
+      </footer>
+    </div>
+    <script>
+<![CDATA[
 			$(".big-background").backstretch("assets/photos/full_width.jpg");
-		</script></body></html>
+		]]>
+    </script>
+  </body>
+</html>
