--- a/docsets/Vagrant.docset/Contents/Resources/Documents/v2/provisioning/shell.html
+++ b/docsets/Vagrant.docset/Contents/Resources/Documents/v2/provisioning/shell.html
@@ -1,24 +1,217 @@
-<!DOCTYPE html><html><head><title> Shell Scripts - Provisioning - Vagrant Documentation</title><meta name=viewport content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"><link href="./../../stylesheets/bootstrap-2bdef9a2.css" media=screen rel=stylesheet /><link href="./../../stylesheets/vagrantup-d5d54c59.css" media=screen rel=stylesheet /><script src="./../../javascripts/jquery-08c11650.js"></script><script src="./../../javascripts/modernizr-84c0465a.js"></script><script src="./../../javascripts/bootstrap.min-98cc7a22.js"></script><script src="./../../javascripts/backstretch-3d1212ad.js"></script><script src="./../../javascripts/vagrantup-03aae2a8.js"></script><link href='//fonts.googleapis.com/css?family=Inconsolata' rel=stylesheet><script src="//use.typekit.net/xfs6zus.js"></script><script>try{Typekit.load();}catch(e){}</script></head><body><div class=wrapper><nav class=docs><a class=vagrant-docs-logo href="/">Vagrant Documentation</a><ul class="pull-right unstyled"><li><a href="//www.vagrantup.com/">Home</a></li></ul></nav><div class="page docs docs-home"><div class=container><div class=row><div class="sidebar span3"><aside class=sidebar-nav><div class="toggle hidden-desktop"><div class="open-close open"></div><a href="#">Contents</a></div><ul class=unstyled><li><a href="./../../v2/">Overview</a></li><li><a href="./../../v2/why-vagrant/index.html">Why Vagrant?</a></li><li><a href="./../../v2/installation/index.html">Installation</a></li><li><a href="./../../v2/getting-started/index.html">Getting Started</a></li><li><a href="./../../v2/cli/index.html">Command-Line Interface</a></li><li><a href="./../../v2/vagrantfile/index.html">Vagrantfile</a></li><li><a href="./../../v2/boxes.html">Boxes</a></li><li class=current><a href="./../../v2/provisioning/index.html">Provisioning</a></li><ul class="sub unstyled"><li><a href="./../../v2/provisioning/basic_usage.html">Basic Usage</a></li><li class=current><a href="./../../v2/provisioning/shell.html">Shell</a></li><li><a href="./../../v2/provisioning/ansible.html">Ansible</a></li><li><a href="./../../v2/provisioning/chef_solo.html">Chef Solo</a></li><li><a href="./../../v2/provisioning/chef_client.html">Chef Client</a></li><li><a href="./../../v2/provisioning/puppet_apply.html">Puppet Apply</a></li><li><a href="./../../v2/provisioning/puppet_agent.html">Puppet Agent</a></li></ul><li><a href="./../../v2/networking/index.html">Networking</a></li><li><a href="./../../v2/synced-folders/index.html">Synced Folders</a></li><li><a href="./../../v2/multi-machine/index.html">Multi-Machine</a></li><li><a href="./../../v2/providers/index.html">Providers</a></li><li><a href="./../../v2/virtualbox/index.html">VirtualBox</a></li><li><a href="./../../v2/vmware/index.html">VMware</a></li><li><a href="./../../v2/plugins/index.html">Plugins</a></li><li><a href="./../../v2/debugging.html">Debugging</a></li></ul></aside></div><div class="page-contents span9"><div class=page-background></div><div class=row><div class="span8 offset1"><h1>Shell Provisioner</h1><p><strong>Provisioner name: <code>&quot;shell&quot;</code></strong></p><p>The shell provisioner allows you to upload and execute a script as the root user within the guest machine.</p><p>Shell provisioning is ideal for users new to Vagrant who want to get up and running quickly and provides a strong alternative for users who aren&#39;t comfortable with a full configuration management system such as Chef or Puppet.</p><h2>Inline Scripts</h2><p>Perhaps the easiest way to get started is with an inline script. An inline script is a script that is given to Vagrant directly within the Vagrantfile. An example is best:</p><pre><code class="ruby">Vagrant.configure(&quot;2&quot;) do |config|
-  config.vm.provision &quot;shell&quot;,
-    inline: &quot;echo Hello, World&quot;
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml">
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=US-ASCII" />
+    <title> Shell Scripts - Provisioning - Vagrant Documentation</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <link href="./../../stylesheets/bootstrap-2bdef9a2.css" media="screen" rel="stylesheet" />
+    <link href="./../../stylesheets/vagrantup-d5d54c59.css" media="screen" rel="stylesheet" />
+    <script src="./../../javascripts/jquery-08c11650.js"></script>
+    <script src="./../../javascripts/modernizr-84c0465a.js"></script>
+    <script src="./../../javascripts/bootstrap.min-98cc7a22.js"></script>
+    <script src="./../../javascripts/backstretch-3d1212ad.js"></script>
+    <script src="./../../javascripts/vagrantup-03aae2a8.js"></script>
+    <link href="./../..//fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet" />
+    <script src="./../..//use.typekit.net/xfs6zus.js"></script>
+    <script>
+<![CDATA[try{Typekit.load();}catch(e){}]]>
+    </script>
+  </head>
+  <body>
+    <div class="wrapper">
+      <nav class="docs">
+        <a class="vagrant-docs-logo" href="./../../">Vagrant Documentation</a>
+        <ul class="pull-right unstyled">
+          <li>
+            <a href="./../..//www.vagrantup.com/">Home</a>
+          </li>
+        </ul>
+      </nav>
+      <div class="page docs docs-home">
+        <div class="container">
+          <div class="row">
+            <div class="sidebar span3">
+              <aside class="sidebar-nav">
+                <div class="toggle hidden-desktop">
+                  <div class="open-close open"></div>
+                  <a href="#">Contents</a>
+                </div>
+                <ul class="unstyled">
+                  <li>
+                    <a href="./../../v2/">Overview</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/why-vagrant/index.html">Why Vagrant?</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/installation/index.html">Installation</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/getting-started/index.html">Getting Started</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/cli/index.html">Command-Line Interface</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/vagrantfile/index.html">Vagrantfile</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/boxes.html">Boxes</a>
+                  </li>
+                  <li class="current">
+                    <a href="./../../v2/provisioning/index.html">Provisioning</a>
+                  </li>
+                  <ul class="sub unstyled">
+                    <li>
+                      <a href="./../../v2/provisioning/basic_usage.html">Basic Usage</a>
+                    </li>
+                    <li class="current">
+                      <a href="./../../v2/provisioning/shell.html">Shell</a>
+                    </li>
+                    <li>
+                      <a href="./../../v2/provisioning/ansible.html">Ansible</a>
+                    </li>
+                    <li>
+                      <a href="./../../v2/provisioning/chef_solo.html">Chef Solo</a>
+                    </li>
+                    <li>
+                      <a href="./../../v2/provisioning/chef_client.html">Chef Client</a>
+                    </li>
+                    <li>
+                      <a href="./../../v2/provisioning/puppet_apply.html">Puppet Apply</a>
+                    </li>
+                    <li>
+                      <a href="./../../v2/provisioning/puppet_agent.html">Puppet Agent</a>
+                    </li>
+                  </ul>
+                  <li>
+                    <a href="./../../v2/networking/index.html">Networking</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/synced-folders/index.html">Synced Folders</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/multi-machine/index.html">Multi-Machine</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/providers/index.html">Providers</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/virtualbox/index.html">VirtualBox</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/vmware/index.html">VMware</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/plugins/index.html">Plugins</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/debugging.html">Debugging</a>
+                  </li>
+                </ul>
+              </aside>
+            </div>
+            <div class="page-contents span9">
+              <div class="page-background"></div>
+              <div class="row">
+                <div class="span8 offset1">
+                  <h1>Shell Provisioner</h1>
+                  <p>
+                    <strong>Provisioner name: <code>"shell"</code></strong>
+                  </p>
+                  <p>The shell provisioner allows you to upload and execute a script as the root user within the guest machine.</p>
+                  <p>Shell provisioning is ideal for users new to Vagrant who want to get up and running quickly and provides a strong alternative for users who aren't comfortable with a full configuration management system such as Chef or Puppet.</p>
+                  <h2>Inline Scripts</h2>
+                  <p>Perhaps the easiest way to get started is with an inline script. An inline script is a script that is given to Vagrant directly within the Vagrantfile. An example is best:</p>
+                  <pre>
+                    <code class="ruby">Vagrant.configure("2") do |config|
+  config.vm.provision "shell",
+    inline: "echo Hello, World"
 end
-</code></pre><p>This causes <code>echo Hello, World</code> to be run within the guest machine when provisioners are run.</p><p>Combined with a little bit more Ruby, this makes it very easy to embed your shell scripts directly within your Vagrantfile. Another example below:</p><pre><code class="ruby">$script = &lt;&lt;SCRIPT
+</code>
+                  </pre>
+                  <p>This causes <code>echo Hello, World</code> to be run within the guest machine when provisioners are run.</p>
+                  <p>Combined with a little bit more Ruby, this makes it very easy to embed your shell scripts directly within your Vagrantfile. Another example below:</p>
+                  <pre>
+                    <code class="ruby">$script = &lt;&lt;SCRIPT
 echo I am provisioning...
 date &gt; /etc/vagrant_provisioned_at
 SCRIPT
 
-Vagrant.configure(&quot;2&quot;) do |config|
-  config.vm.provision &quot;shell&quot;, inline: $script
+Vagrant.configure("2") do |config|
+  config.vm.provision "shell", inline: $script
 end
-</code></pre><p>I understand if you&#39;re not familiar with Ruby, the above may seem very advanced or foreign. But don&#39;t fear, what it is doing is quite simple: the script is assigned to a global variable <code>$script</code>. This global variable contains a string which is then passed in as the inline script to the Vagrant configuration.</p><p>Of course, if any Ruby in your Vagrantfile outside of basic variable assignment makes you uncomfortable, you can use an actual script file, documented in the next section.</p><h2>External Script</h2><p>The shell provisioner can also take an option specifying a path to a shell script on the host machine. Vagrant will then upload this script into the guest and execute it. An example:</p><pre><code class="ruby">Vagrant.configure(&quot;2&quot;) do |config|
-  config.vm.provision &quot;shell&quot;, path: &quot;script.sh&quot;
+</code>
+                  </pre>
+                  <p>I understand if you're not familiar with Ruby, the above may seem very advanced or foreign. But don't fear, what it is doing is quite simple: the script is assigned to a global variable <code>$script</code>. This global variable contains a string which is then passed in as the inline script to the Vagrant configuration.</p>
+                  <p>Of course, if any Ruby in your Vagrantfile outside of basic variable assignment makes you uncomfortable, you can use an actual script file, documented in the next section.</p>
+                  <h2>External Script</h2>
+                  <p>The shell provisioner can also take an option specifying a path to a shell script on the host machine. Vagrant will then upload this script into the guest and execute it. An example:</p>
+                  <pre>
+                    <code class="ruby">Vagrant.configure("2") do |config|
+  config.vm.provision "shell", path: "script.sh"
 end
-</code></pre><p>Relative paths, such as above, are expanded relative to the location of the root Vagrantfile for your project. Absolute paths can also be used, as well as shortcuts such as <code>~</code> (home directory) and <code>..</code> (parent directory).</p><h2>Script Arguments</h2><p>You can parameterize your scripts as well like any normal shell script. These arguments can be specified to the shell provisioner. They should be specified as a string as they&#39;d be typed on the command line, so be sure to properly escape anything:</p><pre><code class="ruby">Vagrant.configure(&quot;2&quot;) do |config|
-  config.vm.provision &quot;shell&quot; do |s|
-    s.inline = &quot;echo $1&quot;
-    s.args   = &quot;&#39;hello, world!&#39;&quot;
+</code>
+                  </pre>
+                  <p>Relative paths, such as above, are expanded relative to the location of the root Vagrantfile for your project. Absolute paths can also be used, as well as shortcuts such as <code>~</code> (home directory) and <code>..</code> (parent directory).</p>
+                  <h2>Script Arguments</h2>
+                  <p>You can parameterize your scripts as well like any normal shell script. These arguments can be specified to the shell provisioner. They should be specified as a string as they'd be typed on the command line, so be sure to properly escape anything:</p>
+                  <pre>
+                    <code class="ruby">Vagrant.configure("2") do |config|
+  config.vm.provision "shell" do |s|
+    s.inline = "echo $1"
+    s.args   = "'hello, world!'"
   end
 end
-</code></pre></div></div></div></div></div></div><footer><div class=container><div class=row><div class=span12><ul class="unstyled footer-nav"><li><a href="//docs.vagrantup.com/">Documentation</a></li><li><a href="//www.vagrantup.com/about">About</a></li><li><a href="//www.vagrantup.com/support">Support</a></li><a href="//downloads.vagrantup.com/"><li class="button inline-button">Download</li></a></ul><ul class="unstyled logos"><a href="//www.vagrantup.com"><li class=vagrant-logo-monochrome></li></a><li><span>by</span></li><a href="//www.hashicorp.com"><li class="hashi-logo-monochrome "></li></a></ul></div></div><div class=row><h6 class=legal> &#169; 2013 HashiCorp </h6></div></div></footer></div><script>
+</code>
+                  </pre>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <footer>
+        <div class="container">
+          <div class="row">
+            <div class="span12">
+              <ul class="unstyled footer-nav">
+                <li>
+                  <a href="./../..//docs.vagrantup.com/">Documentation</a>
+                </li>
+                <li>
+                  <a href="./../..//www.vagrantup.com/about">About</a>
+                </li>
+                <li>
+                  <a href="./../..//www.vagrantup.com/support">Support</a>
+                </li>
+                <a href="./../..//downloads.vagrantup.com/">
+                  <li class="button inline-button">Download</li>
+                </a>
+              </ul>
+              <ul class="unstyled logos">
+                <a href="./../..//www.vagrantup.com">
+                  <li class="vagrant-logo-monochrome"></li>
+                </a>
+                <li>
+                  <span>by</span>
+                </li>
+                <a href="./../..//www.hashicorp.com">
+                  <li class="hashi-logo-monochrome "></li>
+                </a>
+              </ul>
+            </div>
+          </div>
+          <div class="row">
+            <h6 class="legal"> &#169; 2013 HashiCorp </h6>
+          </div>
+        </div>
+      </footer>
+    </div>
+    <script>
+<![CDATA[
 			$(".big-background").backstretch("assets/photos/full_width.jpg");
-		</script></body></html>
+		]]>
+    </script>
+  </body>
+</html>
