--- a/docsets/Vagrant.docset/Contents/Resources/Documents/v2/vmware/installation.html
+++ b/docsets/Vagrant.docset/Contents/Resources/Documents/v2/vmware/installation.html
@@ -1,7 +1,175 @@
-<!DOCTYPE html><html><head><title> Installation - VMware Provider - Vagrant Documentation</title><meta name=viewport content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"><link href="./../../stylesheets/bootstrap-2bdef9a2.css" media=screen rel=stylesheet /><link href="./../../stylesheets/vagrantup-d5d54c59.css" media=screen rel=stylesheet /><script src="./../../javascripts/jquery-08c11650.js"></script><script src="./../../javascripts/modernizr-84c0465a.js"></script><script src="./../../javascripts/bootstrap.min-98cc7a22.js"></script><script src="./../../javascripts/backstretch-3d1212ad.js"></script><script src="./../../javascripts/vagrantup-03aae2a8.js"></script><link href='//fonts.googleapis.com/css?family=Inconsolata' rel=stylesheet><script src="//use.typekit.net/xfs6zus.js"></script><script>try{Typekit.load();}catch(e){}</script></head><body><div class=wrapper><nav class=docs><a class=vagrant-docs-logo href="/">Vagrant Documentation</a><ul class="pull-right unstyled"><li><a href="//www.vagrantup.com/">Home</a></li></ul></nav><div class="page docs docs-home"><div class=container><div class=row><div class="sidebar span3"><aside class=sidebar-nav><div class="toggle hidden-desktop"><div class="open-close open"></div><a href="#">Contents</a></div><ul class=unstyled><li><a href="./../../v2/">Overview</a></li><li><a href="./../../v2/why-vagrant/index.html">Why Vagrant?</a></li><li><a href="./../../v2/installation/index.html">Installation</a></li><li><a href="./../../v2/getting-started/index.html">Getting Started</a></li><li><a href="./../../v2/cli/index.html">Command-Line Interface</a></li><li><a href="./../../v2/vagrantfile/index.html">Vagrantfile</a></li><li><a href="./../../v2/boxes.html">Boxes</a></li><li><a href="./../../v2/provisioning/index.html">Provisioning</a></li><li><a href="./../../v2/networking/index.html">Networking</a></li><li><a href="./../../v2/synced-folders/index.html">Synced Folders</a></li><li><a href="./../../v2/multi-machine/index.html">Multi-Machine</a></li><li><a href="./../../v2/providers/index.html">Providers</a></li><li><a href="./../../v2/virtualbox/index.html">VirtualBox</a></li><li class=current><a href="./../../v2/vmware/index.html">VMware</a></li><ul class="sub unstyled"><li class=current><a href="./../../v2/vmware/installation.html">Installation</a></li><li><a href="./../../v2/vmware/usage.html">Usage</a></li><li><a href="./../../v2/vmware/boxes.html">Boxes</a></li><li><a href="./../../v2/vmware/configuration.html">Configuration</a></li><li><a href="./../../v2/vmware/known-issues.html">Known Issues</a></li></ul><li><a href="./../../v2/plugins/index.html">Plugins</a></li><li><a href="./../../v2/debugging.html">Debugging</a></li></ul></aside></div><div class="page-contents span9"><div class=page-background></div><div class=row><div class="span8 offset1"><h1>Installation</h1><p>The VMware provider is installed using <a href="./../../v2/plugins/usage.html">standard plugin installation procedures</a>. In addition to installing the plugin, a license must be provided so that it can be loaded properly.</p><p>To purchase a license, visit the <a href="//www.vagrantup.com/vmware">Vagrant VMware provider</a> page. After purchasing a license, a link to download it will be emailed to you. Download this file.</p><p>Installing the plugin and license is easy using the <code>vagrant plugin</code> interface. Both steps are shown below. Note that the plugin name is different depending on the provider you&#39;re using. If you&#39;re using the Fusion provider, it is <code>vagrant-vmware-fusion</code>. If you&#39;re using the Workstation provider, it is <code>vagrant-vmware-workstation</code>.</p><pre><code>$ vagrant plugin install vagrant-vmware-fusion
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml">
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=US-ASCII" />
+    <title> Installation - VMware Provider - Vagrant Documentation</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <link href="./../../stylesheets/bootstrap-2bdef9a2.css" media="screen" rel="stylesheet" />
+    <link href="./../../stylesheets/vagrantup-d5d54c59.css" media="screen" rel="stylesheet" />
+    <script src="./../../javascripts/jquery-08c11650.js"></script>
+    <script src="./../../javascripts/modernizr-84c0465a.js"></script>
+    <script src="./../../javascripts/bootstrap.min-98cc7a22.js"></script>
+    <script src="./../../javascripts/backstretch-3d1212ad.js"></script>
+    <script src="./../../javascripts/vagrantup-03aae2a8.js"></script>
+    <link href="./../..//fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet" />
+    <script src="./../..//use.typekit.net/xfs6zus.js"></script>
+    <script>
+<![CDATA[try{Typekit.load();}catch(e){}]]>
+    </script>
+  </head>
+  <body>
+    <div class="wrapper">
+      <nav class="docs">
+        <a class="vagrant-docs-logo" href="./../../">Vagrant Documentation</a>
+        <ul class="pull-right unstyled">
+          <li>
+            <a href="./../..//www.vagrantup.com/">Home</a>
+          </li>
+        </ul>
+      </nav>
+      <div class="page docs docs-home">
+        <div class="container">
+          <div class="row">
+            <div class="sidebar span3">
+              <aside class="sidebar-nav">
+                <div class="toggle hidden-desktop">
+                  <div class="open-close open"></div>
+                  <a href="#">Contents</a>
+                </div>
+                <ul class="unstyled">
+                  <li>
+                    <a href="./../../v2/">Overview</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/why-vagrant/index.html">Why Vagrant?</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/installation/index.html">Installation</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/getting-started/index.html">Getting Started</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/cli/index.html">Command-Line Interface</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/vagrantfile/index.html">Vagrantfile</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/boxes.html">Boxes</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/provisioning/index.html">Provisioning</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/networking/index.html">Networking</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/synced-folders/index.html">Synced Folders</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/multi-machine/index.html">Multi-Machine</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/providers/index.html">Providers</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/virtualbox/index.html">VirtualBox</a>
+                  </li>
+                  <li class="current">
+                    <a href="./../../v2/vmware/index.html">VMware</a>
+                  </li>
+                  <ul class="sub unstyled">
+                    <li class="current">
+                      <a href="./../../v2/vmware/installation.html">Installation</a>
+                    </li>
+                    <li>
+                      <a href="./../../v2/vmware/usage.html">Usage</a>
+                    </li>
+                    <li>
+                      <a href="./../../v2/vmware/boxes.html">Boxes</a>
+                    </li>
+                    <li>
+                      <a href="./../../v2/vmware/configuration.html">Configuration</a>
+                    </li>
+                    <li>
+                      <a href="./../../v2/vmware/known-issues.html">Known Issues</a>
+                    </li>
+                  </ul>
+                  <li>
+                    <a href="./../../v2/plugins/index.html">Plugins</a>
+                  </li>
+                  <li>
+                    <a href="./../../v2/debugging.html">Debugging</a>
+                  </li>
+                </ul>
+              </aside>
+            </div>
+            <div class="page-contents span9">
+              <div class="page-background"></div>
+              <div class="row">
+                <div class="span8 offset1">
+                  <h1>Installation</h1>
+                  <p>The VMware provider is installed using <a href="./../../v2/plugins/usage.html">standard plugin installation procedures</a>. In addition to installing the plugin, a license must be provided so that it can be loaded properly.</p>
+                  <p>To purchase a license, visit the <a href="./../..//www.vagrantup.com/vmware">Vagrant VMware provider</a> page. After purchasing a license, a link to download it will be emailed to you. Download this file.</p>
+                  <p>Installing the plugin and license is easy using the <code>vagrant plugin</code> interface. Both steps are shown below. Note that the plugin name is different depending on the provider you're using. If you're using the Fusion provider, it is <code>vagrant-vmware-fusion</code>. If you're using the Workstation provider, it is <code>vagrant-vmware-workstation</code>.</p>
+                  <pre>
+                    <code>$ vagrant plugin install vagrant-vmware-fusion
 ...
 $ vagrant plugin license vagrant-vmware-fusion license.lic
 ...
-</code></pre><p>For licensing, the first parameter is the name of the plugin, which is <code>vagrant-vmware-fusion</code> for the VMware Fusion provider, or <code>vagrant-vmware-workstation</code> for the VMware Workstation provider. The second parameter is the path to the license itself.</p><p>You can verify the license is properly installed by running any Vagrant command, such as <code>vagrant plugin list</code>. The VMware provider will show an error message if you are missing a license or using an invalid license.</p><p>If there are problems installing the plugin, please contact <a href="//www.vagrantup.com/support.html">support</a>.</p></div></div></div></div></div></div><footer><div class=container><div class=row><div class=span12><ul class="unstyled footer-nav"><li><a href="//docs.vagrantup.com/">Documentation</a></li><li><a href="//www.vagrantup.com/about">About</a></li><li><a href="//www.vagrantup.com/support">Support</a></li><a href="//downloads.vagrantup.com/"><li class="button inline-button">Download</li></a></ul><ul class="unstyled logos"><a href="//www.vagrantup.com"><li class=vagrant-logo-monochrome></li></a><li><span>by</span></li><a href="//www.hashicorp.com"><li class="hashi-logo-monochrome "></li></a></ul></div></div><div class=row><h6 class=legal> &#169; 2013 HashiCorp </h6></div></div></footer></div><script>
+</code>
+                  </pre>
+                  <p>For licensing, the first parameter is the name of the plugin, which is <code>vagrant-vmware-fusion</code> for the VMware Fusion provider, or <code>vagrant-vmware-workstation</code> for the VMware Workstation provider. The second parameter is the path to the license itself.</p>
+                  <p>You can verify the license is properly installed by running any Vagrant command, such as <code>vagrant plugin list</code>. The VMware provider will show an error message if you are missing a license or using an invalid license.</p>
+                  <p>If there are problems installing the plugin, please contact <a href="./../..//www.vagrantup.com/support.html">support</a>.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <footer>
+        <div class="container">
+          <div class="row">
+            <div class="span12">
+              <ul class="unstyled footer-nav">
+                <li>
+                  <a href="./../..//docs.vagrantup.com/">Documentation</a>
+                </li>
+                <li>
+                  <a href="./../..//www.vagrantup.com/about">About</a>
+                </li>
+                <li>
+                  <a href="./../..//www.vagrantup.com/support">Support</a>
+                </li>
+                <a href="./../..//downloads.vagrantup.com/">
+                  <li class="button inline-button">Download</li>
+                </a>
+              </ul>
+              <ul class="unstyled logos">
+                <a href="./../..//www.vagrantup.com">
+                  <li class="vagrant-logo-monochrome"></li>
+                </a>
+                <li>
+                  <span>by</span>
+                </li>
+                <a href="./../..//www.hashicorp.com">
+                  <li class="hashi-logo-monochrome "></li>
+                </a>
+              </ul>
+            </div>
+          </div>
+          <div class="row">
+            <h6 class="legal"> &#169; 2013 HashiCorp </h6>
+          </div>
+        </div>
+      </footer>
+    </div>
+    <script>
+<![CDATA[
 			$(".big-background").backstretch("assets/photos/full_width.jpg");
-		</script></body></html>
+		]]>
+    </script>
+  </body>
+</html>
